@@ -1,12 +1,19 @@
 package de.tum.in.www1.artemis.config.migration;
 
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_SCHEDULING;
 import static tech.jhipster.config.JHipsterConstants.SPRING_PROFILE_TEST;
 
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.time.ZonedDateTime;
-import java.util.*;
+import java.util.HashSet;
+import java.util.HexFormat;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.SortedMap;
+import java.util.TreeMap;
 import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
@@ -26,7 +33,7 @@ import de.tum.in.www1.artemis.repository.MigrationChangeRepository;
  * This service contains utility functionality that verifies a changelog to prevent corruption and executes a given changelog.
  */
 @Service
-@Profile("scheduling")
+@Profile(PROFILE_SCHEDULING)
 public class MigrationService {
 
     private static final Logger log = LoggerFactory.getLogger(MigrationService.class);
@@ -57,7 +64,7 @@ public class MigrationService {
             return;
         }
 
-        log.info("Starting Artemis migration");
+        log.debug("Starting Artemis migration");
 
         SortedMap<Integer, MigrationEntry> entryMap = instantiateEntryMap(entryClassMap);
 
@@ -66,7 +73,7 @@ public class MigrationService {
             throw new MigrationIntegrityException();
         }
         else {
-            log.info("Integrity check passed.");
+            log.debug("Integrity check passed.");
         }
 
         Set<String> executedChanges = migrationChangeRepository.findAll().stream().map(MigrationChangelog::getDateString).collect(Collectors.toCollection(HashSet::new));
@@ -94,9 +101,9 @@ public class MigrationService {
             log.info("Executed {} migration entries", migrationEntryMap.size());
         }
         else {
-            log.info("No migration entries executed");
+            log.debug("No migration entries executed");
         }
-        log.info("Ending Artemis migration");
+        log.debug("Ending Artemis migration");
     }
 
     public SortedMap<Integer, MigrationEntry> instantiateEntryMap(SortedMap<Integer, Class<? extends MigrationEntry>> entryClassMap) {
@@ -115,7 +122,7 @@ public class MigrationService {
      * @return True if the check was successful, otherwise false
      */
     public boolean checkIntegrity(SortedMap<Integer, MigrationEntry> entryMap) {
-        log.info("Starting migration integrity check");
+        log.debug("Starting migration integrity check");
         boolean passed = true;
         Map<Integer, MigrationEntry> brokenInstances = entryMap.entrySet().stream()
                 .filter(entry -> !StringUtils.hasLength(entry.getValue().date()) || !StringUtils.hasLength(entry.getValue().author()))
@@ -129,7 +136,7 @@ public class MigrationService {
         List<MigrationEntry> entryList = entryMap.values().stream().toList();
         if (!entryList.isEmpty()) {
             int startIndex = 1;
-            MigrationEntry baseEntry = entryList.get(0);
+            MigrationEntry baseEntry = entryList.getFirst();
             // Make sure the base date is not null. If it is, it was already caught and logged above.
             while (!StringUtils.hasLength(baseEntry.date()) && startIndex < entryList.size()) {
                 baseEntry = entryList.get(startIndex);
@@ -146,7 +153,7 @@ public class MigrationService {
                 baseEntry = entry;
             }
         }
-        log.info("Ending migration integrity check.");
+        log.debug("Ending migration integrity check.");
         return passed;
     }
 
