@@ -5,7 +5,14 @@ import static java.util.stream.Collectors.toMap;
 import static org.springframework.data.jpa.repository.EntityGraph.EntityGraphType.LOAD;
 
 import java.time.ZonedDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -13,9 +20,9 @@ import jakarta.validation.constraints.NotNull;
 
 import org.springframework.context.annotation.Profile;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.repository.EntityGraph;
-import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
@@ -28,16 +35,17 @@ import de.tum.in.www1.artemis.domain.enumeration.AssessmentType;
 import de.tum.in.www1.artemis.domain.enumeration.ExerciseMode;
 import de.tum.in.www1.artemis.domain.exam.ExerciseGroup;
 import de.tum.in.www1.artemis.domain.exam.StudentExam;
+import de.tum.in.www1.artemis.domain.participation.IdToPresentationScoreSum;
 import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
 import de.tum.in.www1.artemis.domain.quiz.QuizSubmittedAnswerCount;
-import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
+import de.tum.in.www1.artemis.repository.base.ArtemisJpaRepository;
 
 /**
  * Spring Data JPA repository for the Participation entity.
  */
 @Profile(PROFILE_CORE)
 @Repository
-public interface StudentParticipationRepository extends JpaRepository<StudentParticipation, Long> {
+public interface StudentParticipationRepository extends ArtemisJpaRepository<StudentParticipation, Long> {
 
     Set<StudentParticipation> findByExerciseId(long exerciseId);
 
@@ -69,7 +77,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
                 LEFT JOIN p.team.students ts
             WHERE p.exercise.course.id = :courseId
                 AND (p.student.id = :studentId OR ts.id = :studentId)
-             """)
+            """)
     boolean existsByCourseIdAndStudentId(@Param("courseId") long courseId, @Param("studentId") long studentId);
 
     @Query("""
@@ -232,6 +240,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
                 LEFT JOIN FETCH p.results r
                 LEFT JOIN FETCH r.submission s
                 LEFT JOIN FETCH p.submissions
+                LEFT JOIN FETCH r.assessmentNote
             WHERE p.exercise.id = :exerciseId
                 AND (
                     r.id = (SELECT MAX(p_r.id) FROM p.results p_r)
@@ -239,7 +248,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
                     OR r IS NULL
                 )
             """)
-    Set<StudentParticipation> findByExerciseIdWithLatestAndManualResults(@Param("exerciseId") long exerciseId);
+    Set<StudentParticipation> findByExerciseIdWithLatestAndManualResultsAndAssessmentNote(@Param("exerciseId") long exerciseId);
 
     /**
      * Get all participations for a team exercise with each manual and latest results (determined by id).
@@ -272,6 +281,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
                 LEFT JOIN FETCH p.results r
                 LEFT JOIN FETCH r.submission s
                 LEFT JOIN FETCH p.submissions
+                LEFT JOIN FETCH r.assessmentNote
             WHERE p.exercise.id = :exerciseId
                 AND (
                     r.id = (SELECT MAX(p_r.id) FROM p.results p_r WHERE p_r.rated = TRUE)
@@ -279,7 +289,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
                     OR r IS NULL
                 )
             """)
-    Set<StudentParticipation> findByExerciseIdWithLatestAndManualRatedResults(@Param("exerciseId") long exerciseId);
+    Set<StudentParticipation> findByExerciseIdWithLatestAndManualRatedResultsAndAssessmentNote(@Param("exerciseId") long exerciseId);
 
     @Query("""
             SELECT DISTINCT p
@@ -634,29 +644,51 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
             """)
     List<StudentParticipation> findAllWithEagerSubmissionsAndEagerResultsAndEagerAssessorByExerciseIdIgnoreTestRuns(@Param("exerciseId") long exerciseId);
 
-    @Query(value = """
-            SELECT p
+    @Query("""
+            SELECT p.id
             FROM StudentParticipation p
-                LEFT JOIN FETCH p.submissions s
-                LEFT JOIN FETCH p.results r
-            WHERE p.exercise.id = :exerciseId
-                AND (
-                    p.student.firstName LIKE %:partialStudentName%
-                    OR p.student.lastName LIKE %:partialStudentName%
-                ) AND r.completionDate IS NOT NULL
-            """, countQuery = """
-            SELECT COUNT(p)
-            FROM StudentParticipation p
-                LEFT JOIN p.submissions s
-                LEFT JOIN p.results r
+                JOIN Result r ON r.participation.id = p.id
             WHERE p.exercise.id = :exerciseId
                 AND (
                     p.student.firstName LIKE %:partialStudentName%
                     OR p.student.lastName LIKE %:partialStudentName%
                 ) AND r.completionDate IS NOT NULL
             """)
-    Page<StudentParticipation> findAllWithEagerSubmissionsAndEagerResultsByExerciseId(@Param("exerciseId") long exerciseId, @Param("partialStudentName") String partialStudentName,
-            Pageable pageable);
+    List<Long> findIdsByExerciseIdAndStudentName(@Param("exerciseId") long exerciseId, @Param("partialStudentName") String partialStudentName, Pageable pageable);
+
+    @EntityGraph(type = LOAD, attributePaths = { "submissions", "submissions.results" })
+    List<StudentParticipation> findStudentParticipationWithSubmissionsAndResultsByIdIn(List<Long> ids);
+
+    @Query("""
+            SELECT COUNT(p)
+            FROM StudentParticipation p
+                JOIN Result r ON r.participation.id = p.id
+            WHERE p.exercise.id = :exerciseId
+                AND (
+                    p.student.firstName LIKE %:partialStudentName%
+                    OR p.student.lastName LIKE %:partialStudentName%
+                ) AND r.completionDate IS NOT NULL
+            """)
+    long countByExerciseIdAndStudentName(@Param("exerciseId") long exerciseId, @Param("partialStudentName") String partialStudentName);
+
+    /**
+     * Retrieves a paginated list of {@link StudentParticipation} entities associated with a specific exercise,
+     * and optionally filtered by a partial student name. The entities are fetched with eager loading of submissions and results.
+     *
+     * @param exerciseId         the ID of the exercise.
+     * @param partialStudentName the partial name of the student to filter by (can be empty or null to include all students).
+     * @param pageable           the pagination information.
+     * @return a paginated list of {@link StudentParticipation} entities associated with the specified exercise and student name filter.
+     *         If no entities are found, returns an empty page.
+     */
+    default Page<StudentParticipation> findAllWithEagerSubmissionsAndResultsByExerciseId(long exerciseId, String partialStudentName, Pageable pageable) {
+        List<Long> ids = findIdsByExerciseIdAndStudentName(exerciseId, partialStudentName, pageable);
+        if (ids.isEmpty()) {
+            return Page.empty(pageable);
+        }
+        List<StudentParticipation> result = findStudentParticipationWithSubmissionsAndResultsByIdIn(ids);
+        return new PageImpl<>(result, pageable, countByExerciseIdAndStudentName(exerciseId, partialStudentName));
+    }
 
     @Query("""
             SELECT DISTINCT p
@@ -708,7 +740,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
                 AND p.exercise IN :exercises
             """)
     List<StudentParticipation> findByStudentIdAndIndividualExercisesWithEagerSubmissionsResultIgnoreTestRuns(@Param("studentId") long studentId,
-            @Param("exercises") List<Exercise> exercises);
+            @Param("exercises") Collection<Exercise> exercises);
 
     @Query("""
             SELECT DISTINCT p
@@ -837,28 +869,23 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
             @Param("assessor") User assessor);
 
     @NotNull
-    default StudentParticipation findByIdElseThrow(long studentParticipationId) {
-        return findById(studentParticipationId).orElseThrow(() -> new EntityNotFoundException("Student Participation", studentParticipationId));
-    }
-
-    @NotNull
     default StudentParticipation findByIdWithResultsElseThrow(long participationId) {
-        return findWithEagerResultsById(participationId).orElseThrow(() -> new EntityNotFoundException("StudentParticipation", participationId));
+        return getValueElseThrow(findWithEagerResultsById(participationId), participationId);
     }
 
     @NotNull
     default StudentParticipation findByIdWithLegalSubmissionsResultsFeedbackElseThrow(long participationId) {
-        return findWithEagerLegalSubmissionsResultsFeedbacksById(participationId).orElseThrow(() -> new EntityNotFoundException("StudentParticipation", participationId));
+        return getValueElseThrow(findWithEagerLegalSubmissionsResultsFeedbacksById(participationId), participationId);
     }
 
     @NotNull
     default StudentParticipation findByIdWithLegalSubmissionsElseThrow(long participationId) {
-        return findWithEagerLegalSubmissionsById(participationId).orElseThrow(() -> new EntityNotFoundException("Participation", participationId));
+        return getValueElseThrow(findWithEagerLegalSubmissionsById(participationId), participationId);
     }
 
     @NotNull
     default StudentParticipation findByIdWithEagerTeamStudentsElseThrow(long participationId) {
-        return findByIdWithEagerTeamStudents(participationId).orElseThrow(() -> new EntityNotFoundException("Participation", participationId));
+        return getValueElseThrow(findByIdWithEagerTeamStudents(participationId), participationId);
     }
 
     /**
@@ -939,7 +966,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
                     if (!relevantResults.isEmpty()) {
                         // make sure to take the latest result
                         relevantResults.sort((r1, r2) -> r2.getCompletionDate().compareTo(r1.getCompletionDate()));
-                        Result correctResult = relevantResults.get(0);
+                        Result correctResult = relevantResults.getFirst();
                         relevantResults.clear();
                         relevantResults.add(correctResult);
                     }
@@ -1133,8 +1160,10 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
      * @return a set of id to presentation score sum mappings
      */
     @Query("""
-            SELECT COALESCE(p.student.id, ts.id) AS id,
-                COALESCE(SUM(p.presentationScore), 0) AS presentationScoreSum
+            SELECT new de.tum.in.www1.artemis.domain.participation.IdToPresentationScoreSum(
+                COALESCE(p.student.id, ts.id),
+                COALESCE(SUM(p.presentationScore), 0)
+            )
             FROM StudentParticipation p
                 LEFT JOIN p.team.students ts
             WHERE p.exercise.course.id = :courseId
@@ -1153,16 +1182,6 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
     Set<StudentParticipation> findByExerciseIdWithEagerSubmissions(@Param("exerciseId") long exerciseId);
 
     /**
-     * Helper interface to map the result of the {@link #sumPresentationScoreByStudentIdsAndCourseId(long, Set)} query to a map.
-     */
-    interface IdToPresentationScoreSum {
-
-        long getId();
-
-        double getPresentationScoreSum();
-    }
-
-    /**
      * Maps all given studentIds to their presentation score sum for the given course.
      *
      * @param courseId   the id of the course
@@ -1170,8 +1189,11 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
      * @return a map of studentId to presentation score sum
      */
     default Map<Long, Double> mapStudentIdToPresentationScoreSumByCourseIdAndStudentIds(long courseId, Set<Long> studentIds) {
-        return sumPresentationScoreByStudentIdsAndCourseId(courseId, studentIds).stream()
-                .collect(toMap(IdToPresentationScoreSum::getId, IdToPresentationScoreSum::getPresentationScoreSum));
+        if (studentIds == null || studentIds.isEmpty()) {
+            return Map.of();
+        }
+        var studentIdToPresentationScoreSum = sumPresentationScoreByStudentIdsAndCourseId(courseId, studentIds);
+        return studentIdToPresentationScoreSum.stream().collect(toMap(IdToPresentationScoreSum::participantId, IdToPresentationScoreSum::presentationScoreSum));
     }
 
     /**
