@@ -3,20 +3,31 @@ package de.tum.in.www1.artemis.service.connectors.localci.buildagent;
 import static de.tum.in.www1.artemis.config.Constants.PROFILE_BUILDAGENT;
 
 import java.time.ZonedDateTime;
-import java.util.*;
-import java.util.concurrent.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.UUID;
+import java.util.concurrent.CancellationException;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.stream.Collectors;
 
 import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Profile;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
+import com.hazelcast.cluster.Member;
 import com.hazelcast.collection.IQueue;
 import com.hazelcast.collection.ItemEvent;
 import com.hazelcast.collection.ItemListener;
@@ -24,9 +35,14 @@ import com.hazelcast.core.HazelcastInstance;
 import com.hazelcast.cp.lock.FencedLock;
 import com.hazelcast.map.IMap;
 
+import de.tum.in.www1.artemis.domain.BuildLogEntry;
 import de.tum.in.www1.artemis.domain.enumeration.BuildStatus;
 import de.tum.in.www1.artemis.security.SecurityUtils;
-import de.tum.in.www1.artemis.service.connectors.localci.dto.*;
+import de.tum.in.www1.artemis.service.connectors.localci.dto.BuildAgentInformation;
+import de.tum.in.www1.artemis.service.connectors.localci.dto.BuildJobQueueItem;
+import de.tum.in.www1.artemis.service.connectors.localci.dto.BuildResult;
+import de.tum.in.www1.artemis.service.connectors.localci.dto.JobTimingInfo;
+import de.tum.in.www1.artemis.service.connectors.localci.dto.ResultQueueItem;
 
 /**
  * Includes functionality for processing build jobs from the shared build job queue.
@@ -43,23 +59,27 @@ public class SharedQueueProcessingService {
 
     private final BuildJobManagementService buildJobManagementService;
 
+    private final BuildLogsMap buildLogsMap;
+
     private final AtomicInteger localProcessingJobs = new AtomicInteger(0);
+
+    private final BuildAgentSshKeyService buildAgentSSHKeyService;
 
     /**
      * Lock to prevent multiple nodes from processing the same build job.
      */
     private FencedLock sharedLock;
 
-    private IQueue<LocalCIBuildJobQueueItem> queue;
+    private IQueue<BuildJobQueueItem> queue;
 
     private IQueue<ResultQueueItem> resultQueue;
 
     /**
      * Map of build jobs currently being processed across all nodes
      */
-    private IMap<String, LocalCIBuildJobQueueItem> processingJobs;
+    private IMap<String, BuildJobQueueItem> processingJobs;
 
-    private IMap<String, LocalCIBuildAgentInformation> buildAgentInformation;
+    private IMap<String, BuildAgentInformation> buildAgentInformation;
 
     /**
      * Lock for operations on single instance.
@@ -68,10 +88,13 @@ public class SharedQueueProcessingService {
 
     private UUID listenerId;
 
-    public SharedQueueProcessingService(HazelcastInstance hazelcastInstance, ExecutorService localCIBuildExecutorService, BuildJobManagementService buildJobManagementService) {
+    public SharedQueueProcessingService(@Qualifier("hazelcastInstance") HazelcastInstance hazelcastInstance, ExecutorService localCIBuildExecutorService,
+            BuildJobManagementService buildJobManagementService, BuildLogsMap buildLogsMap, BuildAgentSshKeyService buildAgentSSHKeyService) {
         this.hazelcastInstance = hazelcastInstance;
         this.localCIBuildExecutorService = (ThreadPoolExecutor) localCIBuildExecutorService;
         this.buildJobManagementService = buildJobManagementService;
+        this.buildLogsMap = buildLogsMap;
+        this.buildAgentSSHKeyService = buildAgentSSHKeyService;
     }
 
     /**
@@ -84,9 +107,10 @@ public class SharedQueueProcessingService {
         this.sharedLock = this.hazelcastInstance.getCPSubsystem().getLock("buildJobQueueLock");
         this.queue = this.hazelcastInstance.getQueue("buildJobQueue");
         this.resultQueue = this.hazelcastInstance.getQueue("buildResultQueue");
-        this.listenerId = this.queue.addItemListener(new SharedQueueProcessingService.QueuedBuildJobItemListener(), true);
+        this.listenerId = this.queue.addItemListener(new QueuedBuildJobItemListener(), true);
     }
 
+    @PreDestroy
     public void removeListener() {
         this.queue.removeItemListener(this.listenerId);
     }
@@ -97,6 +121,10 @@ public class SharedQueueProcessingService {
      */
     @Scheduled(initialDelay = 60000, fixedRate = 60000) // 1 minute initial delay, 1 minute fixed rate
     public void updateBuildAgentInformation() {
+        if (noDataMemberInClusterAvailable(hazelcastInstance)) {
+            log.debug("There are only lite member in the cluster. Not updating build agent information.");
+            return;
+        }
         // Remove build agent information of offline nodes
         removeOfflineNodes();
 
@@ -122,6 +150,10 @@ public class SharedQueueProcessingService {
      * If so, process the next build job.
      */
     private void checkAvailabilityAndProcessNextBuild() {
+        if (noDataMemberInClusterAvailable(hazelcastInstance)) {
+            log.debug("There are only lite member in the cluster. Not processing build jobs.");
+            return;
+        }
         // Check conditions before acquiring the lock to avoid unnecessary locking
         if (!nodeIsAvailable()) {
             // Add build agent information of local hazelcast member to map if not already present
@@ -136,15 +168,13 @@ public class SharedQueueProcessingService {
         if (queue.isEmpty()) {
             return;
         }
-
+        BuildJobQueueItem buildJob = null;
         instanceLock.lock();
         try {
             // Recheck conditions after acquiring the lock to ensure they are still valid
             if (!nodeIsAvailable() || queue.isEmpty()) {
                 return;
             }
-
-            LocalCIBuildJobQueueItem buildJob;
 
             // Lock the queue to prevent multiple nodes from processing the same build job
             sharedLock.lock();
@@ -156,17 +186,37 @@ public class SharedQueueProcessingService {
             }
             processBuild(buildJob);
         }
+        catch (RejectedExecutionException e) {
+            log.error("Couldn't add build job to threadpool: {}\n Concurrent Build Jobs Count: {} Active tasks in pool: {}, Concurrent Build Jobs Size: {}", buildJob,
+                    localProcessingJobs.get(), localCIBuildExecutorService.getActiveCount(), localCIBuildExecutorService.getMaximumPoolSize(), e);
+
+            // Add the build job back to the queue
+            if (buildJob != null) {
+                processingJobs.remove(buildJob.id());
+
+                buildJob = new BuildJobQueueItem(buildJob, "");
+                log.info("Adding build job back to the queue: {}", buildJob);
+                queue.add(buildJob);
+                localProcessingJobs.decrementAndGet();
+            }
+
+            updateLocalBuildAgentInformation();
+        }
         finally {
             instanceLock.unlock();
         }
     }
 
-    private LocalCIBuildJobQueueItem addToProcessingJobs() {
-        LocalCIBuildJobQueueItem buildJob = queue.poll();
+    private static boolean noDataMemberInClusterAvailable(HazelcastInstance hazelcastInstance) {
+        return hazelcastInstance.getCluster().getMembers().stream().allMatch(Member::isLiteMember);
+    }
+
+    private BuildJobQueueItem addToProcessingJobs() {
+        BuildJobQueueItem buildJob = queue.poll();
         if (buildJob != null) {
             String hazelcastMemberAddress = hazelcastInstance.getCluster().getLocalMember().getAddress().toString();
 
-            LocalCIBuildJobQueueItem processingJob = new LocalCIBuildJobQueueItem(buildJob, hazelcastMemberAddress);
+            BuildJobQueueItem processingJob = new BuildJobQueueItem(buildJob, hazelcastMemberAddress);
 
             processingJobs.put(processingJob.id(), processingJob);
             localProcessingJobs.incrementAndGet();
@@ -181,12 +231,12 @@ public class SharedQueueProcessingService {
         updateLocalBuildAgentInformationWithRecentJob(null);
     }
 
-    private void updateLocalBuildAgentInformationWithRecentJob(LocalCIBuildJobQueueItem recentBuildJob) {
+    private void updateLocalBuildAgentInformationWithRecentJob(BuildJobQueueItem recentBuildJob) {
         String memberAddress = hazelcastInstance.getCluster().getLocalMember().getAddress().toString();
         try {
             buildAgentInformation.lock(memberAddress);
             // Add/update
-            LocalCIBuildAgentInformation info = getUpdatedLocalBuildAgentInformation(recentBuildJob);
+            BuildAgentInformation info = getUpdatedLocalBuildAgentInformation(recentBuildJob);
             try {
                 buildAgentInformation.put(info.name(), info);
             }
@@ -199,14 +249,14 @@ public class SharedQueueProcessingService {
         }
     }
 
-    private LocalCIBuildAgentInformation getUpdatedLocalBuildAgentInformation(LocalCIBuildJobQueueItem recentBuildJob) {
+    private BuildAgentInformation getUpdatedLocalBuildAgentInformation(BuildJobQueueItem recentBuildJob) {
         String memberAddress = hazelcastInstance.getCluster().getLocalMember().getAddress().toString();
-        List<LocalCIBuildJobQueueItem> processingJobsOfMember = getProcessingJobsOfNode(memberAddress);
+        List<BuildJobQueueItem> processingJobsOfMember = getProcessingJobsOfNode(memberAddress);
         int numberOfCurrentBuildJobs = processingJobsOfMember.size();
         int maxNumberOfConcurrentBuilds = localCIBuildExecutorService.getMaximumPoolSize();
         boolean active = numberOfCurrentBuildJobs > 0;
-        LocalCIBuildAgentInformation agent = buildAgentInformation.get(memberAddress);
-        List<LocalCIBuildJobQueueItem> recentBuildJobs;
+        BuildAgentInformation agent = buildAgentInformation.get(memberAddress);
+        List<BuildJobQueueItem> recentBuildJobs;
         if (agent != null) {
             recentBuildJobs = agent.recentBuildJobs();
         }
@@ -216,15 +266,17 @@ public class SharedQueueProcessingService {
         // TODO: Make this number configurable
         if (recentBuildJob != null) {
             if (recentBuildJobs.size() >= 20) {
-                recentBuildJobs.remove(0);
+                recentBuildJobs.removeFirst();
             }
             recentBuildJobs.add(recentBuildJob);
         }
 
-        return new LocalCIBuildAgentInformation(memberAddress, maxNumberOfConcurrentBuilds, numberOfCurrentBuildJobs, processingJobsOfMember, active, recentBuildJobs);
+        String publicSshKey = buildAgentSSHKeyService.getPublicKeyAsString();
+
+        return new BuildAgentInformation(memberAddress, maxNumberOfConcurrentBuilds, numberOfCurrentBuildJobs, processingJobsOfMember, active, recentBuildJobs, publicSshKey);
     }
 
-    private List<LocalCIBuildJobQueueItem> getProcessingJobsOfNode(String memberAddress) {
+    private List<BuildJobQueueItem> getProcessingJobsOfNode(String memberAddress) {
         return processingJobs.values().stream().filter(job -> Objects.equals(job.buildAgentAddress(), memberAddress)).toList();
     }
 
@@ -241,7 +293,7 @@ public class SharedQueueProcessingService {
      * Process a build job by submitting it to the local CI executor service.
      * On completion, check for next job.
      */
-    private void processBuild(LocalCIBuildJobQueueItem buildJob) {
+    private void processBuild(BuildJobQueueItem buildJob) {
         // The 'user' is not properly logged into Artemis, this leads to an issue when accessing custom repository methods.
         // Therefore, a mock auth object has to be created.
         SecurityUtils.setAuthorizationObject();
@@ -252,16 +304,19 @@ public class SharedQueueProcessingService {
 
         log.info("Processing build job: {}", buildJob);
 
-        CompletableFuture<LocalCIBuildResult> futureResult = buildJobManagementService.executeBuildJob(buildJob);
+        CompletableFuture<BuildResult> futureResult = buildJobManagementService.executeBuildJob(buildJob);
         futureResult.thenAccept(buildResult -> {
 
             JobTimingInfo jobTimingInfo = new JobTimingInfo(buildJob.jobTimingInfo().submissionDate(), buildJob.jobTimingInfo().buildStartDate(), ZonedDateTime.now());
 
-            LocalCIBuildJobQueueItem finishedJob = new LocalCIBuildJobQueueItem(buildJob.id(), buildJob.name(), buildJob.buildAgentAddress(), buildJob.participationId(),
-                    buildJob.courseId(), buildJob.exerciseId(), buildJob.retryCount(), buildJob.priority(), BuildStatus.SUCCESSFUL, buildJob.repositoryInfo(), jobTimingInfo,
-                    buildJob.buildConfig(), null);
+            BuildJobQueueItem finishedJob = new BuildJobQueueItem(buildJob.id(), buildJob.name(), buildJob.buildAgentAddress(), buildJob.participationId(), buildJob.courseId(),
+                    buildJob.exerciseId(), buildJob.retryCount(), buildJob.priority(), BuildStatus.SUCCESSFUL, buildJob.repositoryInfo(), jobTimingInfo, buildJob.buildConfig(),
+                    null);
 
-            ResultQueueItem resultQueueItem = new ResultQueueItem(buildResult, finishedJob, null);
+            List<BuildLogEntry> buildLogs = buildLogsMap.getBuildLogs(buildJob.id());
+            buildLogsMap.removeBuildLogs(buildJob.id());
+
+            ResultQueueItem resultQueueItem = new ResultQueueItem(buildResult, finishedJob, buildLogs, null);
             resultQueue.add(resultQueueItem);
 
             // after processing a build job, remove it from the processing jobs
@@ -276,7 +331,7 @@ public class SharedQueueProcessingService {
         futureResult.exceptionally(ex -> {
             ZonedDateTime completionDate = ZonedDateTime.now();
 
-            LocalCIBuildJobQueueItem job;
+            BuildJobQueueItem job;
             BuildStatus status;
 
             if (!(ex.getCause() instanceof CancellationException) || !ex.getMessage().equals("Build job with id " + buildJob.id() + " was cancelled.")) {
@@ -287,9 +342,16 @@ public class SharedQueueProcessingService {
                 status = BuildStatus.CANCELLED;
             }
 
-            job = new LocalCIBuildJobQueueItem(buildJob, completionDate, status);
+            job = new BuildJobQueueItem(buildJob, completionDate, status);
 
-            ResultQueueItem resultQueueItem = new ResultQueueItem(null, job, ex);
+            List<BuildLogEntry> buildLogs = buildLogsMap.getBuildLogs(buildJob.id());
+            buildLogsMap.removeBuildLogs(buildJob.id());
+
+            BuildResult failedResult = new BuildResult(buildJob.buildConfig().branch(), buildJob.buildConfig().assignmentCommitHash(), buildJob.buildConfig().testCommitHash(),
+                    false);
+            failedResult.setBuildLogEntries(buildLogs);
+
+            ResultQueueItem resultQueueItem = new ResultQueueItem(failedResult, job, buildLogs, ex);
             resultQueue.add(resultQueueItem);
 
             processingJobs.remove(buildJob.id());
@@ -305,21 +367,21 @@ public class SharedQueueProcessingService {
      * Checks whether the node has at least one thread available for a new build job.
      */
     private boolean nodeIsAvailable() {
-        log.debug("Currently processing jobs on this node: {}, maximum pool size of thread executor : {}", localProcessingJobs.get(),
-                localCIBuildExecutorService.getMaximumPoolSize());
+        log.debug("Currently processing jobs on this node: {}, active threads in Pool: {}, maximum pool size of thread executor : {}", localProcessingJobs.get(),
+                localCIBuildExecutorService.getActiveCount(), localCIBuildExecutorService.getMaximumPoolSize());
         return localProcessingJobs.get() < localCIBuildExecutorService.getMaximumPoolSize();
     }
 
-    public class QueuedBuildJobItemListener implements ItemListener<LocalCIBuildJobQueueItem> {
+    public class QueuedBuildJobItemListener implements ItemListener<BuildJobQueueItem> {
 
         @Override
-        public void itemAdded(ItemEvent<LocalCIBuildJobQueueItem> event) {
+        public void itemAdded(ItemEvent<BuildJobQueueItem> event) {
             log.debug("CIBuildJobQueueItem added to queue: {}", event.getItem());
             checkAvailabilityAndProcessNextBuild();
         }
 
         @Override
-        public void itemRemoved(ItemEvent<LocalCIBuildJobQueueItem> event) {
+        public void itemRemoved(ItemEvent<BuildJobQueueItem> event) {
             log.debug("CIBuildJobQueueItem removed from queue: {}", event.getItem());
         }
     }
