@@ -2,10 +2,9 @@ package de.tum.in.www1.artemis.web.rest.lecture;
 
 import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
 
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
+import java.util.Optional;
 
 import jakarta.ws.rs.BadRequestException;
 
@@ -13,7 +12,13 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Profile;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import de.tum.in.www1.artemis.domain.Lecture;
 import de.tum.in.www1.artemis.domain.lecture.VideoUnit;
@@ -22,6 +27,7 @@ import de.tum.in.www1.artemis.repository.VideoUnitRepository;
 import de.tum.in.www1.artemis.security.Role;
 import de.tum.in.www1.artemis.security.annotations.EnforceAtLeastEditor;
 import de.tum.in.www1.artemis.service.AuthorizationCheckService;
+import de.tum.in.www1.artemis.service.LectureUnitService;
 import de.tum.in.www1.artemis.service.competency.CompetencyProgressService;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 
@@ -42,12 +48,15 @@ public class VideoUnitResource {
 
     private final CompetencyProgressService competencyProgressService;
 
+    private final LectureUnitService lectureUnitService;
+
     public VideoUnitResource(LectureRepository lectureRepository, AuthorizationCheckService authorizationCheckService, VideoUnitRepository videoUnitRepository,
-            CompetencyProgressService competencyProgressService) {
+            CompetencyProgressService competencyProgressService, LectureUnitService lectureUnitService) {
         this.lectureRepository = lectureRepository;
         this.authorizationCheckService = authorizationCheckService;
         this.videoUnitRepository = videoUnitRepository;
         this.competencyProgressService = competencyProgressService;
+        this.lectureUnitService = lectureUnitService;
     }
 
     /**
@@ -81,15 +90,16 @@ public class VideoUnitResource {
         if (videoUnit.getId() == null) {
             throw new BadRequestException();
         }
+        var existingVideoUnit = videoUnitRepository.findByIdWithCompetenciesElseThrow(videoUnit.getId());
 
-        checkVideoUnitCourseAndLecture(videoUnit, lectureId);
+        checkVideoUnitCourseAndLecture(existingVideoUnit, lectureId);
         normalizeVideoUrl(videoUnit);
-        validateVideoUrl(videoUnit);
+        lectureUnitService.validateUrlStringAndReturnUrl(videoUnit.getSource());
         authorizationCheckService.checkHasAtLeastRoleInCourseElseThrow(Role.EDITOR, videoUnit.getLecture().getCourse(), null);
 
         VideoUnit result = videoUnitRepository.save(videoUnit);
 
-        competencyProgressService.updateProgressByLearningObjectAsync(result);
+        competencyProgressService.updateProgressForUpdatedLearningObjectAsync(existingVideoUnit, Optional.of(videoUnit));
 
         return ResponseEntity.ok(result);
     }
@@ -111,7 +121,7 @@ public class VideoUnitResource {
         }
 
         normalizeVideoUrl(videoUnit);
-        validateVideoUrl(videoUnit);
+        lectureUnitService.validateUrlStringAndReturnUrl(videoUnit.getSource());
 
         Lecture lecture = lectureRepository.findByIdWithLectureUnitsAndAttachmentsElseThrow(lectureId);
         if (lecture.getCourse() == null) {
@@ -125,7 +135,7 @@ public class VideoUnitResource {
         videoUnit.setLecture(lecture);
         lecture.addLectureUnit(videoUnit);
         Lecture updatedLecture = lectureRepository.save(lecture);
-        VideoUnit persistedVideoUnit = (VideoUnit) updatedLecture.getLectureUnits().get(updatedLecture.getLectureUnits().size() - 1);
+        VideoUnit persistedVideoUnit = (VideoUnit) updatedLecture.getLectureUnits().getLast();
 
         competencyProgressService.updateProgressByLearningObjectAsync(persistedVideoUnit);
 
@@ -158,19 +168,4 @@ public class VideoUnitResource {
             videoUnit.setSource(videoUnit.getSource().strip());
         }
     }
-
-    /**
-     * Validates the provided video Url.
-     *
-     * @param videoUnit provided video unit
-     */
-    private void validateVideoUrl(VideoUnit videoUnit) {
-        try {
-            new URL(videoUnit.getSource());
-        }
-        catch (MalformedURLException exception) {
-            throw new BadRequestException();
-        }
-    }
-
 }
