@@ -30,20 +30,16 @@ import de.tum.in.www1.artemis.domain.exam.Exam;
 import de.tum.in.www1.artemis.domain.lecture.ExerciseUnit;
 import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
 import de.tum.in.www1.artemis.exam.ExamUtilService;
-import de.tum.in.www1.artemis.exercise.textexercise.TextExerciseUtilService;
+import de.tum.in.www1.artemis.exercise.text.TextExerciseUtilService;
 import de.tum.in.www1.artemis.lecture.LectureUtilService;
 import de.tum.in.www1.artemis.participation.ParticipationUtilService;
-import de.tum.in.www1.artemis.repository.CourseRepository;
-import de.tum.in.www1.artemis.repository.ExerciseRepository;
 import de.tum.in.www1.artemis.repository.GradingScaleRepository;
 import de.tum.in.www1.artemis.repository.LectureUnitRepository;
 import de.tum.in.www1.artemis.repository.ParticipantScoreRepository;
 import de.tum.in.www1.artemis.repository.StudentParticipationRepository;
 import de.tum.in.www1.artemis.repository.TeamRepository;
-import de.tum.in.www1.artemis.repository.UserRepository;
 import de.tum.in.www1.artemis.service.scheduled.ParticipantScoreScheduleService;
 import de.tum.in.www1.artemis.team.TeamUtilService;
-import de.tum.in.www1.artemis.user.UserUtilService;
 import de.tum.in.www1.artemis.web.rest.dto.score.ScoreDTO;
 
 class ParticipantScoreIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCTest {
@@ -67,15 +63,6 @@ class ParticipantScoreIntegrationTest extends AbstractSpringIntegrationLocalCILo
     private User student1;
 
     @Autowired
-    private ExerciseRepository exerciseRepository;
-
-    @Autowired
-    private CourseRepository courseRepository;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
     private TeamRepository teamRepository;
 
     @Autowired
@@ -89,9 +76,6 @@ class ParticipantScoreIntegrationTest extends AbstractSpringIntegrationLocalCILo
 
     @Autowired
     private GradingScaleRepository gradingScaleRepository;
-
-    @Autowired
-    private UserUtilService userUtilService;
 
     @Autowired
     private CompetencyUtilService competencyUtilService;
@@ -130,7 +114,7 @@ class ParticipantScoreIntegrationTest extends AbstractSpringIntegrationLocalCILo
         textExercise = textExerciseUtilService.createIndividualTextExercise(course, pastTimestamp, pastTimestamp, pastTimestamp);
         ExerciseUnit exerciseUnit = lectureUtilService.createExerciseUnit(textExercise);
         lecture = lectureUtilService.addLectureUnitsToLecture(lecture, List.of(exerciseUnit));
-        idOfExerciseUnit = lecture.getLectureUnits().get(0).getId();
+        idOfExerciseUnit = lecture.getLectureUnits().getFirst().getId();
 
         competencyUtilService.createCompetencyWithExercise(course, textExercise);
 
@@ -152,7 +136,7 @@ class ParticipantScoreIntegrationTest extends AbstractSpringIntegrationLocalCILo
         exam = examUtilService.addExamWithUser(course, student1, true, pastTimestamp, pastTimestamp, pastTimestamp);
 
         idOfExam = exam.getId();
-        var examTextExercise = textExerciseUtilService.createTextExerciseForExam(exam.getExerciseGroups().get(0));
+        var examTextExercise = textExerciseUtilService.createTextExerciseForExam(exam.getExerciseGroups().getFirst());
         long getIdOfIndividualTextExerciseOfExam = examTextExercise.getId();
         participationUtilService.createParticipationSubmissionAndResult(getIdOfIndividualTextExerciseOfExam, student1, 10.0, 10.0, 50, true);
 
