@@ -16,7 +16,7 @@ import de.tum.in.www1.artemis.domain.enumeration.FeedbackType;
 import de.tum.in.www1.artemis.domain.enumeration.Visibility;
 import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
 import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
-import de.tum.in.www1.artemis.exercise.programmingexercise.ProgrammingExerciseUtilService;
+import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseUtilService;
 import de.tum.in.www1.artemis.repository.ResultRepository;
 
 class ResultTest extends AbstractSpringIntegrationIndependentTest {
@@ -124,7 +124,7 @@ class ResultTest extends AbstractSpringIntegrationIndependentTest {
     void testRemoveTestCaseNames() {
         ProgrammingExercise exercise = programmingExerciseUtilService.addProgrammingExerciseToCourse(course);
         var tests = programmingExerciseUtilService.addTestCasesToProgrammingExercise(exercise);
-        Feedback tst1 = new Feedback().positive(true).type(FeedbackType.AUTOMATIC).testCase(tests.get(0));
+        Feedback tst1 = new Feedback().positive(true).type(FeedbackType.AUTOMATIC).testCase(tests.getFirst());
         Feedback tst2 = new Feedback().positive(false).type(FeedbackType.AUTOMATIC).testCase(tests.get(2)).detailText("This is wrong.");
 
         ProgrammingExerciseStudentParticipation participation = new ProgrammingExerciseStudentParticipation();
@@ -147,7 +147,7 @@ class ResultTest extends AbstractSpringIntegrationIndependentTest {
         participation.setExercise(exercise);
         result.setParticipation(participation);
 
-        Feedback tst1 = new Feedback().positive(true).type(FeedbackType.AUTOMATIC).testCase(tests.get(0));
+        Feedback tst1 = new Feedback().positive(true).type(FeedbackType.AUTOMATIC).testCase(tests.getFirst());
         Feedback tst2 = new Feedback().positive(false).type(FeedbackType.AUTOMATIC).testCase(tests.get(1)).detailText("This is wrong.");
 
         result.setFeedbacks(new ArrayList<>(List.of(tst1, tst2)));
@@ -155,5 +155,20 @@ class ResultTest extends AbstractSpringIntegrationIndependentTest {
         result.filterSensitiveFeedbacks(true);
 
         assertThat(result.getFeedbacks()).hasSize(2).allMatch(feedback -> feedback.getTestCase().getTestName() != null);
+    }
+
+    @Test
+    void filterSensitiveInformation() {
+        Result result = new Result();
+        result.setAssessor(new User());
+        result.setAssessmentNote(new AssessmentNote());
+
+        assertThat(result.getAssessor()).isNotNull();
+        assertThat(result.getAssessmentNote()).isNotNull();
+
+        result.filterSensitiveInformation();
+
+        assertThat(result.getAssessor()).isNull();
+        assertThat(result.getAssessmentNote()).isNull();
     }
 }
