@@ -13,7 +13,12 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationIndependentTest;
-import de.tum.in.www1.artemis.domain.*;
+import de.tum.in.www1.artemis.domain.Course;
+import de.tum.in.www1.artemis.domain.Feedback;
+import de.tum.in.www1.artemis.domain.ProgrammingExercise;
+import de.tum.in.www1.artemis.domain.ProgrammingExerciseTestCase;
+import de.tum.in.www1.artemis.domain.Result;
+import de.tum.in.www1.artemis.domain.User;
 import de.tum.in.www1.artemis.domain.enumeration.AssessmentType;
 import de.tum.in.www1.artemis.domain.enumeration.FeedbackType;
 import de.tum.in.www1.artemis.domain.enumeration.Visibility;
@@ -22,9 +27,13 @@ import de.tum.in.www1.artemis.domain.hestia.ExerciseHintActivation;
 import de.tum.in.www1.artemis.domain.hestia.ProgrammingExerciseTask;
 import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
 import de.tum.in.www1.artemis.exercise.ExerciseUtilService;
-import de.tum.in.www1.artemis.exercise.programmingexercise.ProgrammingExerciseUtilService;
+import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseUtilService;
 import de.tum.in.www1.artemis.participation.ParticipationUtilService;
-import de.tum.in.www1.artemis.repository.*;
+import de.tum.in.www1.artemis.repository.ProgrammingExerciseRepository;
+import de.tum.in.www1.artemis.repository.ProgrammingExerciseTestCaseRepository;
+import de.tum.in.www1.artemis.repository.ProgrammingSubmissionTestRepository;
+import de.tum.in.www1.artemis.repository.ResultRepository;
+import de.tum.in.www1.artemis.repository.UserRepository;
 import de.tum.in.www1.artemis.repository.hestia.ExerciseHintActivationRepository;
 import de.tum.in.www1.artemis.repository.hestia.ExerciseHintRepository;
 import de.tum.in.www1.artemis.repository.hestia.ProgrammingExerciseTaskRepository;
@@ -112,8 +121,8 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
         sortedTasks = programmingExerciseTaskService.getSortedTasks(exercise);
 
         hints = new ArrayList<>(exerciseHintRepository.findByExerciseId(exercise.getId()));
-        exerciseHint = hints.get(0);
-        exerciseHint.setProgrammingExerciseTask(sortedTasks.get(0));
+        exerciseHint = hints.getFirst();
+        exerciseHint.setProgrammingExerciseTask(sortedTasks.getFirst());
         hints.get(1).setProgrammingExerciseTask(sortedTasks.get(1));
         hints.get(2).setProgrammingExerciseTask(sortedTasks.get(2));
         exerciseHintRepository.saveAll(hints);
@@ -160,8 +169,8 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
 
     @Test
     void testGetAvailableExerciseHintsEmpty4() {
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
         addResultWithFailedTestCases(sortedTasks.get(2).getTestCases());
         addResultWithFailedTestCases(sortedTasks.get(2).getTestCases());
         var availableExerciseHints = exerciseHintService.getAvailableExerciseHints(exercise, student);
@@ -179,9 +188,9 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
 
     @Test
     void testGetAvailableExerciseHints2() {
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
         var availableExerciseHints = exerciseHintService.getAvailableExerciseHints(exercise, student);
         assertThat(availableExerciseHints).containsExactly(hints.get(1));
     }
@@ -236,7 +245,7 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
         exerciseHint.setDisplayThreshold((short) 0);
         exerciseHintRepository.save(exerciseHint);
         addResultWithFailedTestCases(exercise.getTestCases());
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
         var availableExerciseHints = exerciseHintService.getAvailableExerciseHints(exercise, student);
         assertThat(availableExerciseHints).containsExactly(exerciseHint);
     }
@@ -246,7 +255,7 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
         // create result with feedbacks with "null" for attribute "positive"
         addResultWithSuccessfulTestCases(exercise.getTestCases());
         var results = resultRepository.findAllByParticipationExerciseId(exercise.getId());
-        var optionalResult = resultRepository.findWithBidirectionalSubmissionAndFeedbackAndAssessorAndTeamStudentsById(results.iterator().next().getId());
+        var optionalResult = resultRepository.findWithBidirectionalSubmissionAndFeedbackAndAssessorAndAssessmentNoteAndTeamStudentsById(results.iterator().next().getId());
         assertThat(optionalResult).isPresent();
 
         var result = optionalResult.get();
@@ -267,7 +276,7 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
         addResultWithFailedTestCases(exercise.getTestCases());
         addResultWithFailedTestCases(exercise.getTestCases());
 
-        assertThat(exerciseHintService.activateHint(hints.get(0), student)).isTrue();
+        assertThat(exerciseHintService.activateHint(hints.getFirst(), student)).isTrue();
         assertThat(exerciseHintService.activateHint(hints.get(1), student)).isFalse();
         assertThat(exerciseHintService.activateHint(hints.get(2), student)).isFalse();
         Set<ExerciseHintActivation> exerciseHintActivations = exerciseHintActivationRepository.findByExerciseAndUserWithExerciseHintRelations(exercise.getId(), student.getId());
@@ -276,11 +285,11 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
 
     @Test
     void testActivateExerciseHint2() {
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
-        addResultWithSuccessfulTestCases(sortedTasks.get(0).getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
+        addResultWithSuccessfulTestCases(sortedTasks.getFirst().getTestCases());
 
-        assertThat(exerciseHintService.activateHint(hints.get(0), student)).isFalse();
+        assertThat(exerciseHintService.activateHint(hints.getFirst(), student)).isFalse();
         assertThat(exerciseHintService.activateHint(hints.get(1), student)).isTrue();
         assertThat(exerciseHintService.activateHint(hints.get(2), student)).isFalse();
         Set<ExerciseHintActivation> exerciseHintActivations = exerciseHintActivationRepository.findByExerciseAndUserWithExerciseHintRelations(exercise.getId(), student.getId());
@@ -293,7 +302,7 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
         addResultWithFailedTestCases(sortedTasks.get(2).getTestCases());
         addResultWithFailedTestCases(sortedTasks.get(2).getTestCases());
 
-        assertThat(exerciseHintService.activateHint(hints.get(0), student)).isFalse();
+        assertThat(exerciseHintService.activateHint(hints.getFirst(), student)).isFalse();
         assertThat(exerciseHintService.activateHint(hints.get(1), student)).isFalse();
         assertThat(exerciseHintService.activateHint(hints.get(2), student)).isTrue();
         Set<ExerciseHintActivation> exerciseHintActivations = exerciseHintActivationRepository.findByExerciseAndUserWithExerciseHintRelations(exercise.getId(), student.getId());
@@ -306,7 +315,7 @@ class ExerciseHintServiceTest extends AbstractSpringIntegrationIndependentTest {
         addResultWithSuccessfulTestCases(exercise.getTestCases());
         addResultWithSuccessfulTestCases(exercise.getTestCases());
 
-        assertThat(exerciseHintService.activateHint(hints.get(0), student)).isFalse();
+        assertThat(exerciseHintService.activateHint(hints.getFirst(), student)).isFalse();
         assertThat(exerciseHintService.activateHint(hints.get(1), student)).isFalse();
         assertThat(exerciseHintService.activateHint(hints.get(2), student)).isFalse();
         Set<ExerciseHintActivation> exerciseHintActivations = exerciseHintActivationRepository.findByExerciseAndUserWithExerciseHintRelations(exercise.getId(), student.getId());
