@@ -1,6 +1,10 @@
 package de.tum.in.www1.artemis.lecture;
 
+import static de.tum.in.www1.artemis.util.RequestUtilService.deleteProgrammingExerciseParamsFalse;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 
 import java.util.HashSet;
 import java.util.List;
@@ -13,20 +17,24 @@ import org.springframework.http.HttpStatus;
 import org.springframework.security.test.context.support.WithMockUser;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationIndependentTest;
-import de.tum.in.www1.artemis.course.CourseUtilService;
-import de.tum.in.www1.artemis.domain.*;
+import de.tum.in.www1.artemis.domain.Course;
+import de.tum.in.www1.artemis.domain.Exercise;
+import de.tum.in.www1.artemis.domain.FileUploadExercise;
+import de.tum.in.www1.artemis.domain.Lecture;
+import de.tum.in.www1.artemis.domain.ProgrammingExercise;
+import de.tum.in.www1.artemis.domain.TextExercise;
 import de.tum.in.www1.artemis.domain.lecture.ExerciseUnit;
 import de.tum.in.www1.artemis.domain.modeling.ModelingExercise;
 import de.tum.in.www1.artemis.domain.quiz.QuizExercise;
-import de.tum.in.www1.artemis.repository.*;
-import de.tum.in.www1.artemis.user.UserUtilService;
+import de.tum.in.www1.artemis.repository.FileUploadExerciseRepository;
+import de.tum.in.www1.artemis.repository.ModelingExerciseRepository;
+import de.tum.in.www1.artemis.repository.ProgrammingExerciseRepository;
+import de.tum.in.www1.artemis.repository.QuizExerciseRepository;
+import de.tum.in.www1.artemis.repository.TextExerciseRepository;
 
 class ExerciseUnitIntegrationTest extends AbstractSpringIntegrationIndependentTest {
 
     private static final String TEST_PREFIX = "exerciseunitintegration";
-
-    @Autowired
-    private CourseRepository courseRepository;
 
     @Autowired
     private TextExerciseRepository textExerciseRepository;
@@ -42,12 +50,6 @@ class ExerciseUnitIntegrationTest extends AbstractSpringIntegrationIndependentTe
 
     @Autowired
     private FileUploadExerciseRepository fileUploadExerciseRepository;
-
-    @Autowired
-    private UserUtilService userUtilService;
-
-    @Autowired
-    private CourseUtilService courseUtilService;
 
     private Course course1;
 
@@ -67,7 +69,7 @@ class ExerciseUnitIntegrationTest extends AbstractSpringIntegrationIndependentTe
     void initTestCase() throws Exception {
         userUtilService.addUsers(TEST_PREFIX, 1, 2, 0, 1);
         List<Course> courses = courseUtilService.createCoursesWithExercisesAndLectures(TEST_PREFIX, true, 2);
-        this.course1 = this.courseRepository.findByIdWithExercisesAndLecturesElseThrow(courses.get(0).getId());
+        this.course1 = this.courseRepository.findByIdWithExercisesAndExerciseDetailsAndLecturesElseThrow(courses.getFirst().getId());
         this.lecture1 = this.course1.getLectures().stream().findFirst().orElseThrow();
 
         this.textExercise = textExerciseRepository.findByCourseIdWithCategories(course1.getId()).stream().findFirst().orElseThrow();
@@ -182,7 +184,7 @@ class ExerciseUnitIntegrationTest extends AbstractSpringIntegrationIndependentTe
         request.delete("/api/modeling-exercises/" + modelingExercise.getId(), HttpStatus.OK);
         request.delete("/api/quiz-exercises/" + quizExercise.getId(), HttpStatus.OK);
         request.delete("/api/file-upload-exercises/" + fileUploadExercise.getId(), HttpStatus.OK);
-        request.delete("/api/programming-exercises/" + programmingExercise.getId(), HttpStatus.OK);
+        request.delete("/api/programming-exercises/" + programmingExercise.getId(), HttpStatus.OK, deleteProgrammingExerciseParamsFalse());
 
         List<ExerciseUnit> exerciseUnitsOfLecture = request.getList("/api/lectures/" + lecture1.getId() + "/exercise-units", HttpStatus.OK, ExerciseUnit.class);
         assertThat(exerciseUnitsOfLecture).isEmpty();
@@ -212,6 +214,7 @@ class ExerciseUnitIntegrationTest extends AbstractSpringIntegrationIndependentTe
             request.get("/api/exercises/" + exercise.getId(), HttpStatus.OK, Exercise.class);
         }
 
+        verify(competencyProgressService, never()).updateProgressForUpdatedLearningObjectAsync(any(), any());
     }
 
 }
