@@ -1,11 +1,15 @@
 package de.tum.in.www1.artemis.participation;
 
+import static de.tum.in.www1.artemis.connector.AthenaRequestMockProvider.ATHENA_MODULE_PROGRAMMING_TEST;
+import static de.tum.in.www1.artemis.util.TestResourceUtils.HalfSecond;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyBoolean;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.timeout;
 import static org.mockito.Mockito.verify;
 
 import java.net.URI;
@@ -26,6 +30,9 @@ import org.junit.jupiter.api.parallel.Isolated;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.EnumSource;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
+import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
@@ -33,9 +40,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.util.LinkedMultiValueMap;
 
-import de.tum.in.www1.artemis.AbstractSpringIntegrationJenkinsGitlabTest;
+import de.tum.in.www1.artemis.AbstractAthenaTest;
 import de.tum.in.www1.artemis.assessment.GradingScaleUtilService;
-import de.tum.in.www1.artemis.course.CourseUtilService;
 import de.tum.in.www1.artemis.domain.Course;
 import de.tum.in.www1.artemis.domain.Exercise;
 import de.tum.in.www1.artemis.domain.FileUploadExercise;
@@ -52,11 +58,13 @@ import de.tum.in.www1.artemis.domain.enumeration.ExerciseMode;
 import de.tum.in.www1.artemis.domain.enumeration.InitializationState;
 import de.tum.in.www1.artemis.domain.enumeration.Language;
 import de.tum.in.www1.artemis.domain.enumeration.QuizMode;
+import de.tum.in.www1.artemis.domain.exam.Exam;
 import de.tum.in.www1.artemis.domain.modeling.ModelingExercise;
 import de.tum.in.www1.artemis.domain.modeling.ModelingSubmission;
 import de.tum.in.www1.artemis.domain.participation.Participation;
 import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
 import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
+import de.tum.in.www1.artemis.domain.quiz.QuizBatch;
 import de.tum.in.www1.artemis.domain.quiz.QuizExercise;
 import de.tum.in.www1.artemis.domain.quiz.QuizPointStatistic;
 import de.tum.in.www1.artemis.domain.quiz.QuizSubmission;
@@ -64,47 +72,38 @@ import de.tum.in.www1.artemis.domain.quiz.ShortAnswerQuestion;
 import de.tum.in.www1.artemis.domain.quiz.ShortAnswerSpot;
 import de.tum.in.www1.artemis.domain.quiz.ShortAnswerSubmittedAnswer;
 import de.tum.in.www1.artemis.domain.quiz.ShortAnswerSubmittedText;
-import de.tum.in.www1.artemis.exercise.fileuploadexercise.FileUploadExerciseUtilService;
-import de.tum.in.www1.artemis.exercise.programmingexercise.ProgrammingExerciseFactory;
-import de.tum.in.www1.artemis.exercise.programmingexercise.ProgrammingExerciseTestService;
-import de.tum.in.www1.artemis.exercise.programmingexercise.ProgrammingExerciseUtilService;
-import de.tum.in.www1.artemis.exercise.quizexercise.QuizExerciseFactory;
-import de.tum.in.www1.artemis.exercise.quizexercise.QuizExerciseUtilService;
-import de.tum.in.www1.artemis.exercise.textexercise.TextExerciseFactory;
-import de.tum.in.www1.artemis.exercise.textexercise.TextExerciseUtilService;
-import de.tum.in.www1.artemis.repository.CourseRepository;
-import de.tum.in.www1.artemis.repository.ExerciseRepository;
-import de.tum.in.www1.artemis.repository.ResultRepository;
+import de.tum.in.www1.artemis.exam.ExamFactory;
+import de.tum.in.www1.artemis.exercise.fileupload.FileUploadExerciseUtilService;
+import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseFactory;
+import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseTestService;
+import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseUtilService;
+import de.tum.in.www1.artemis.exercise.quiz.QuizExerciseFactory;
+import de.tum.in.www1.artemis.exercise.quiz.QuizExerciseUtilService;
+import de.tum.in.www1.artemis.exercise.text.TextExerciseFactory;
+import de.tum.in.www1.artemis.exercise.text.TextExerciseUtilService;
+import de.tum.in.www1.artemis.repository.ExamRepository;
+import de.tum.in.www1.artemis.repository.ProgrammingExerciseBuildConfigRepository;
 import de.tum.in.www1.artemis.repository.StudentParticipationRepository;
 import de.tum.in.www1.artemis.repository.SubmissionRepository;
 import de.tum.in.www1.artemis.repository.TeamRepository;
 import de.tum.in.www1.artemis.service.GradingScaleService;
 import de.tum.in.www1.artemis.service.ParticipationService;
-import de.tum.in.www1.artemis.service.QuizBatchService;
 import de.tum.in.www1.artemis.service.feature.Feature;
 import de.tum.in.www1.artemis.service.feature.FeatureToggleService;
-import de.tum.in.www1.artemis.service.scheduled.cache.quiz.QuizScheduleService;
-import de.tum.in.www1.artemis.user.UserUtilService;
+import de.tum.in.www1.artemis.service.quiz.QuizBatchService;
+import de.tum.in.www1.artemis.service.quiz.QuizScheduleService;
 import de.tum.in.www1.artemis.util.LocalRepository;
+import de.tum.in.www1.artemis.web.rest.dto.QuizBatchJoinDTO;
 
-class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTest {
+class ParticipationIntegrationTest extends AbstractAthenaTest {
 
     private static final String TEST_PREFIX = "participationintegration";
-
-    @Autowired
-    private CourseRepository courseRepo;
-
-    @Autowired
-    private ExerciseRepository exerciseRepo;
 
     @Autowired
     private StudentParticipationRepository participationRepo;
 
     @Autowired
     private SubmissionRepository submissionRepository;
-
-    @Autowired
-    private ResultRepository resultRepository;
 
     @Autowired
     private FeatureToggleService featureToggleService;
@@ -125,13 +124,10 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     private ProgrammingExerciseTestService programmingExerciseTestService;
 
     @Autowired
+    private ProgrammingExerciseBuildConfigRepository programmingExerciseBuildConfigRepository;
+
+    @Autowired
     private GradingScaleService gradingScaleService;
-
-    @Autowired
-    private UserUtilService userUtilService;
-
-    @Autowired
-    private CourseUtilService courseUtilService;
 
     @Autowired
     private ProgrammingExerciseUtilService programmingExerciseUtilService;
@@ -151,6 +147,12 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @Autowired
     private QuizExerciseUtilService quizExerciseUtilService;
 
+    @Autowired
+    private ExamRepository examRepository;
+
+    @Captor
+    private ArgumentCaptor<Result> resultCaptor;
+
     @Value("${artemis.version-control.default-branch:main}")
     private String defaultBranch;
 
@@ -163,7 +165,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     private ProgrammingExercise programmingExercise;
 
     @BeforeEach
-    void initTestCase() throws Exception {
+    void initTestData() throws Exception {
         userUtilService.addUsers(TEST_PREFIX, 4, 1, 1, 1);
 
         // Add users that are not in the course/exercise
@@ -181,12 +183,13 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
             }
         }
         modelingExercise.setTitle("UML Class Diagram");
-        exerciseRepo.save(modelingExercise);
+        exerciseRepository.save(modelingExercise);
 
         programmingExercise = ProgrammingExerciseFactory.generateProgrammingExercise(ZonedDateTime.now().minusDays(1), ZonedDateTime.now().plusDays(1), course);
-        programmingExercise = exerciseRepo.save(programmingExercise);
+        programmingExercise.setBuildConfig(programmingExerciseBuildConfigRepository.save(programmingExercise.getBuildConfig()));
+        programmingExercise = exerciseRepository.save(programmingExercise);
         course.addExercises(programmingExercise);
-        course = courseRepo.save(course);
+        course = courseRepository.save(course);
 
         doReturn(defaultBranch).when(versionControlService).getDefaultBranchOfRepository(any());
         doReturn("Success").when(continuousIntegrationService).copyBuildPlan(any(), any(), any(), any(), any(), anyBoolean());
@@ -197,6 +200,8 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
 
     @AfterEach
     void tearDown() throws Exception {
+        Mockito.reset(programmingMessagingService);
+
         featureToggleService.enableFeature(Feature.ProgrammingExercises);
         programmingExerciseTestService.tearDown();
     }
@@ -251,7 +256,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @WithMockUser(username = TEST_PREFIX + "student2")
     void participateInTextExercise_releaseDateNotReached() throws Exception {
         textExercise.setReleaseDate(ZonedDateTime.now().plusHours(2));
-        exerciseRepo.save(textExercise);
+        exerciseRepository.save(textExercise);
         request.post("/api/exercises/" + textExercise.getId() + "/participations", null, HttpStatus.FORBIDDEN);
     }
 
@@ -260,7 +265,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     void participateInTextExercise_noReleaseDateStartDateNotReached() throws Exception {
         textExercise.setReleaseDate(null);
         textExercise.setStartDate(ZonedDateTime.now().plusHours(2));
-        exerciseRepo.save(textExercise);
+        exerciseRepository.save(textExercise);
         request.post("/api/exercises/" + textExercise.getId() + "/participations", null, HttpStatus.FORBIDDEN);
     }
 
@@ -269,7 +274,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     void participateInTextExercise_releaseDateReachedStartDateNotReached() throws Exception {
         textExercise.setReleaseDate(ZonedDateTime.now().minusMinutes(1));
         textExercise.setStartDate(ZonedDateTime.now().plusHours(2));
-        exerciseRepo.save(textExercise);
+        exerciseRepository.save(textExercise);
         request.post("/api/exercises/" + textExercise.getId() + "/participations", null, HttpStatus.FORBIDDEN);
     }
 
@@ -278,7 +283,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     void participateInTextExercise_releaseDateReachedStartDateNotReachedAsTutor() throws Exception {
         textExercise.setReleaseDate(ZonedDateTime.now().minusMinutes(1));
         textExercise.setStartDate(ZonedDateTime.now().plusHours(2));
-        exerciseRepo.save(textExercise);
+        exerciseRepository.save(textExercise);
         request.post("/api/exercises/" + textExercise.getId() + "/participations", null, HttpStatus.CREATED);
     }
 
@@ -287,7 +292,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     void participateInTextExercise_releaseDateReachedStartDateReached() throws Exception {
         textExercise.setReleaseDate(ZonedDateTime.now().minusMinutes(2));
         textExercise.setStartDate(ZonedDateTime.now().minusMinutes(1));
-        exerciseRepo.save(textExercise);
+        exerciseRepository.save(textExercise);
         request.post("/api/exercises/" + textExercise.getId() + "/participations", null, HttpStatus.CREATED);
     }
 
@@ -321,7 +326,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @WithMockUser(username = TEST_PREFIX + "student1")
     void participateInProgrammingExercise_dueDatePassed() throws Exception {
         programmingExercise.setDueDate(ZonedDateTime.now().minusHours(2));
-        exerciseRepo.save(programmingExercise);
+        exerciseRepository.save(programmingExercise);
         request.post("/api/exercises/" + programmingExercise.getId() + "/participations", null, HttpStatus.FORBIDDEN);
     }
 
@@ -346,7 +351,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @WithMockUser(username = TEST_PREFIX + "student1")
     void practiceProgrammingExercise_beforeDatePassed() throws Exception {
         programmingExercise.setDueDate(ZonedDateTime.now().plusHours(2));
-        exerciseRepo.save(programmingExercise);
+        exerciseRepository.save(programmingExercise);
         request.post("/api/exercises/" + programmingExercise.getId() + "/participations/practice", null, HttpStatus.FORBIDDEN);
     }
 
@@ -354,7 +359,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @WithMockUser(username = TEST_PREFIX + "student1")
     void participateInProgrammingTeamExercise_withoutAssignedTeam() throws Exception {
         programmingExercise.setMode(ExerciseMode.TEAM);
-        exerciseRepo.save(programmingExercise);
+        exerciseRepository.save(programmingExercise);
         request.post("/api/exercises/" + programmingExercise.getId() + "/participations", null, HttpStatus.BAD_REQUEST);
     }
 
@@ -362,7 +367,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @WithMockUser(username = TEST_PREFIX + "student1")
     void practiceProgrammingExercise_successful() throws Exception {
         programmingExercise.setDueDate(ZonedDateTime.now().minusHours(1));
-        exerciseRepo.save(programmingExercise);
+        exerciseRepository.save(programmingExercise);
 
         User user = userUtilService.getUserByLogin(TEST_PREFIX + "student1");
         prepareMocksForProgrammingExercise(user.getLogin(), true);
@@ -395,7 +400,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @WithMockUser(username = TEST_PREFIX + "student1")
     void practiceProgrammingTeamExercise_Forbidden() throws Exception {
         programmingExercise.setMode(ExerciseMode.TEAM);
-        exerciseRepo.save(programmingExercise);
+        exerciseRepository.save(programmingExercise);
         request.post("/api/exercises/" + programmingExercise.getId() + "/participations/practice", null, HttpStatus.BAD_REQUEST);
     }
 
@@ -509,32 +514,9 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void requestFeedbackScoreNotFull() throws Exception {
-        var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INACTIVE, programmingExercise,
-                userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
-
-        var localRepo = new LocalRepository(defaultBranch);
-        localRepo.configureRepos("testLocalRepo", "testOriginRepo");
-
-        participation.setRepositoryUri(ParticipationFactory.getMockFileRepositoryUri(localRepo).getURI().toString());
-        participationRepo.save(participation);
-
-        gitService.getDefaultLocalPathOfRepo(participation.getVcsRepositoryUri());
-
-        var result = ParticipationFactory.generateResult(true, 90).participation(participation);
-        result.setCompletionDate(ZonedDateTime.now());
-        resultRepository.save(result);
-
-        request.putWithResponseBody("/api/exercises/" + programmingExercise.getId() + "/request-feedback", null, ProgrammingExerciseStudentParticipation.class,
-                HttpStatus.BAD_REQUEST);
-        localRepo.resetLocalRepo();
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void requestFeedbackExerciseNotPossibleIfOnlyAutomaticFeedbacks() throws Exception {
         programmingExercise.setAssessmentType(AssessmentType.AUTOMATIC);
-        exerciseRepo.save(programmingExercise);
+        exerciseRepository.save(programmingExercise);
 
         var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INITIALIZED, programmingExercise,
                 userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
@@ -558,7 +540,17 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void requestFeedbackSuccess() throws Exception {
+    void requestFeedbackSuccess_withAthenaSuccess() throws Exception {
+
+        var course = programmingExercise.getCourseViaExerciseGroupOrCourseMember();
+        course.setRestrictedAthenaModulesAccess(true);
+        this.courseRepository.save(course);
+
+        this.programmingExercise.setFeedbackSuggestionModule(ATHENA_MODULE_PROGRAMMING_TEST);
+        this.exerciseRepository.save(programmingExercise);
+
+        athenaRequestMockProvider.mockGetFeedbackSuggestionsAndExpect("programming");
+
         var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INACTIVE, programmingExercise,
                 userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
 
@@ -570,19 +562,72 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
 
         gitService.getDefaultLocalPathOfRepo(participation.getVcsRepositoryUri());
 
-        var result = ParticipationFactory.generateResult(true, 100).participation(participation);
-        result.setCompletionDate(ZonedDateTime.now());
-        resultRepository.save(result);
+        Result result1 = participationUtilService.createSubmissionAndResult(participation, 100, false);
+        Result result2 = participationUtilService.addResultToParticipation(participation, result1.getSubmission());
+        result2.setAssessmentType(AssessmentType.AUTOMATIC);
+        result2.setCompletionDate(ZonedDateTime.now());
+        resultRepository.save(result2);
 
-        doNothing().when(programmingExerciseParticipationService).lockStudentRepositoryAndParticipation(programmingExercise, participation);
+        doNothing().when(programmingExerciseParticipationService).lockStudentRepositoryAndParticipation(eq(programmingExercise), any());
+        doNothing().when(programmingExerciseParticipationService).unlockStudentRepositoryAndParticipation(any());
 
-        var response = request.putWithResponseBody("/api/exercises/" + programmingExercise.getId() + "/request-feedback", null, ProgrammingExerciseStudentParticipation.class,
-                HttpStatus.OK);
+        request.putWithResponseBody("/api/exercises/" + programmingExercise.getId() + "/request-feedback", null, ProgrammingExerciseStudentParticipation.class, HttpStatus.OK);
 
-        assertThat(response.getResults()).allMatch(result1 -> result.getAssessmentType() == AssessmentType.SEMI_AUTOMATIC);
-        assertThat(response.getIndividualDueDate()).isNotNull().isBefore(ZonedDateTime.now());
+        verify(programmingMessagingService, timeout(2000).times(2)).notifyUserAboutNewResult(resultCaptor.capture(), any());
 
-        verify(programmingExerciseParticipationService).lockStudentRepositoryAndParticipation(programmingExercise, participation);
+        Result invokedResult = resultCaptor.getAllValues().getFirst();
+        assertThat(invokedResult).isNotNull();
+        assertThat(invokedResult.getId()).isNotNull();
+        assertThat(invokedResult.isSuccessful()).isTrue();
+        assertThat(invokedResult.isAthenaAutomatic()).isTrue();
+        assertThat(invokedResult.getFeedbacks()).hasSize(1);
+
+        localRepo.resetLocalRepo();
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+    void requestFeedbackSuccess_withAthenaFailure() throws Exception {
+
+        var course = programmingExercise.getCourseViaExerciseGroupOrCourseMember();
+        course.setRestrictedAthenaModulesAccess(true);
+        this.courseRepository.save(course);
+
+        this.programmingExercise.setFeedbackSuggestionModule(ATHENA_MODULE_PROGRAMMING_TEST);
+        this.exerciseRepository.save(programmingExercise);
+        this.athenaRequestMockProvider.mockGetFeedbackSuggestionsWithFailure("programming");
+
+        var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INACTIVE, programmingExercise,
+                userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
+
+        var localRepo = new LocalRepository(defaultBranch);
+        localRepo.configureRepos("testLocalRepo", "testOriginRepo");
+
+        participation.setRepositoryUri(ParticipationFactory.getMockFileRepositoryUri(localRepo).getURI().toString());
+        participationRepo.save(participation);
+
+        gitService.getDefaultLocalPathOfRepo(participation.getVcsRepositoryUri());
+
+        Result result1 = participationUtilService.createSubmissionAndResult(participation, 100, false);
+        Result result2 = participationUtilService.addResultToParticipation(participation, result1.getSubmission());
+        result2.setAssessmentType(AssessmentType.AUTOMATIC);
+        result2.setCompletionDate(ZonedDateTime.now());
+        resultRepository.save(result2);
+
+        doNothing().when(programmingExerciseParticipationService).lockStudentRepositoryAndParticipation(any(), any());
+        doNothing().when(programmingExerciseParticipationService).unlockStudentRepositoryAndParticipation(any());
+
+        request.putWithResponseBody("/api/exercises/" + programmingExercise.getId() + "/request-feedback", null, ProgrammingExerciseStudentParticipation.class, HttpStatus.OK);
+
+        verify(programmingMessagingService, timeout(2000).times(2)).notifyUserAboutNewResult(resultCaptor.capture(), any());
+
+        Result invokedResult = resultCaptor.getAllValues().getFirst();
+        assertThat(invokedResult).isNotNull();
+        assertThat(invokedResult.getId()).isNotNull();
+        assertThat(invokedResult.isSuccessful()).isFalse();
+        assertThat(invokedResult.isAthenaAutomatic()).isTrue();
+        assertThat(invokedResult.getFeedbacks()).hasSize(0);
+
         localRepo.resetLocalRepo();
     }
 
@@ -616,7 +661,8 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void resumeProgrammingExerciseParticipation_forbidden() throws Exception {
         var exercise = ProgrammingExerciseFactory.generateProgrammingExercise(ZonedDateTime.now().minusDays(2), ZonedDateTime.now().minusDays(1), course);
-        exercise = exerciseRepo.save(exercise);
+        exercise.setBuildConfig(programmingExerciseBuildConfigRepository.save(exercise.getBuildConfig()));
+        exercise = exerciseRepository.save(exercise);
         var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INACTIVE, exercise,
                 userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
         participationRepo.save(participation);
@@ -662,7 +708,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         var participations = request.getList("/api/exercises/" + textExercise.getId() + "/participations", HttpStatus.OK, StudentParticipation.class, params);
         assertThat(participations).as("Exactly 4 participations are returned").hasSize(4).as("Only participation that has student are returned")
                 .allMatch(p -> p.getStudent().isPresent());
-        StudentParticipation receivedOnlyParticipation = participations.stream().filter(p -> p.getParticipant().equals(students.get(0))).findFirst().orElseThrow();
+        StudentParticipation receivedOnlyParticipation = participations.stream().filter(p -> p.getParticipant().equals(students.getFirst())).findFirst().orElseThrow();
         StudentParticipation receivedParticipationWithResult = participations.stream().filter(p -> p.getParticipant().equals(students.get(1))).findFirst().orElseThrow();
         StudentParticipation receivedParticipationWithOnlySubmission = participations.stream().filter(p -> p.getParticipant().equals(students.get(2))).findFirst().orElseThrow();
         StudentParticipation receivedTestParticipation = participations.stream().filter(p -> p.getParticipant().equals(students.get(3))).findFirst().orElseThrow();
@@ -688,8 +734,8 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     void getAllParticipationsForExercise_withLatestResults_forQuizExercise() throws Exception {
         var quizExercise = QuizExerciseFactory.generateQuizExercise(ZonedDateTime.now().minusDays(1), ZonedDateTime.now().plusDays(1), QuizMode.INDIVIDUAL, course);
         course.addExercises(quizExercise);
-        courseRepo.save(course);
-        exerciseRepo.save(quizExercise);
+        courseRepository.save(course);
+        exerciseRepository.save(quizExercise);
 
         var participation = participationUtilService.createAndSaveParticipationForExercise(quizExercise, TEST_PREFIX + "student1");
         var result1 = participationUtilService.createSubmissionAndResult(participation, 42, true);
@@ -747,7 +793,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         participationUtilService.createAndSaveParticipationForExercise(textExercise, TEST_PREFIX + "student2");
         participationUtilService.createAndSaveParticipationForExercise(modelingExercise, TEST_PREFIX + "student1");
         var quizEx = QuizExerciseFactory.generateQuizExercise(ZonedDateTime.now().minusDays(1), ZonedDateTime.now().plusDays(1), QuizMode.SYNCHRONIZED, course);
-        exerciseRepo.save(quizEx);
+        exerciseRepository.save(quizEx);
         participationUtilService.createAndSaveParticipationForExercise(quizEx, TEST_PREFIX + "student2");
 
         var participations = request.getList("/api/courses/" + course.getId() + "/participations", HttpStatus.OK, StudentParticipation.class);
@@ -907,7 +953,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void updateIndividualDueDateExamExercise() throws Exception {
-        final FileUploadExercise exercise = fileUploadExerciseUtilService.addCourseExamExerciseGroupWithOneFileUploadExercise();
+        final FileUploadExercise exercise = fileUploadExerciseUtilService.addCourseExamExerciseGroupWithOneFileUploadExercise(false);
         StudentParticipation participation = ParticipationFactory.generateStudentParticipation(InitializationState.INITIALIZED, exercise,
                 userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
         participation = participationRepo.save(participation);
@@ -939,7 +985,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         final var course = fileUploadExerciseUtilService.addCourseWithFileUploadExercise();
         var exercise = (FileUploadExercise) course.getExercises().stream().findAny().orElseThrow();
         exercise.setDueDate(ZonedDateTime.now().plusHours(2));
-        exercise = exerciseRepo.save(exercise);
+        exercise = exerciseRepository.save(exercise);
 
         var submission = fileUploadExerciseUtilService.addFileUploadSubmission(exercise, ParticipationFactory.generateFileUploadSubmission(true), TEST_PREFIX + "student1");
         submission.getParticipation().setIndividualDueDate(ZonedDateTime.now().plusDays(1));
@@ -949,7 +995,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
                 StudentParticipation.class, HttpStatus.OK);
 
         assertThat(response).hasSize(1);
-        assertThat(response.get(0).getIndividualDueDate()).isEqualToIgnoringNanos(submission.getParticipation().getIndividualDueDate());
+        assertThat(response.getFirst().getIndividualDueDate()).isCloseTo(submission.getParticipation().getIndividualDueDate(), HalfSecond());
 
         verify(programmingExerciseScheduleService, never()).updateScheduling(any());
     }
@@ -960,7 +1006,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         final var course = programmingExerciseUtilService.addCourseWithOneProgrammingExercise();
         var exercise = (ProgrammingExercise) course.getExercises().stream().findAny().orElseThrow();
         exercise.setDueDate(ZonedDateTime.now().plusHours(2));
-        exercise = exerciseRepo.save(exercise);
+        exercise = exerciseRepository.save(exercise);
 
         final var participation = participationUtilService.addStudentParticipationForProgrammingExercise(exercise, TEST_PREFIX + "student1");
         participation.setIndividualDueDate(ZonedDateTime.now().plusHours(20));
@@ -976,7 +1022,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
                 StudentParticipation.class, HttpStatus.OK);
 
         assertThat(response).hasSize(1);
-        assertThat(response.get(0).getIndividualDueDate()).isEqualToIgnoringNanos(participation.getIndividualDueDate());
+        assertThat(response.getFirst().getIndividualDueDate()).isCloseTo(participation.getIndividualDueDate(), HalfSecond());
 
         verify(programmingExerciseScheduleService).updateScheduling(exercise);
         verify(programmingExerciseParticipationService).unlockStudentRepositoryAndParticipation(participation);
@@ -989,7 +1035,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         final var course = programmingExerciseUtilService.addCourseWithOneProgrammingExercise();
         var exercise = (ProgrammingExercise) course.getExercises().stream().findAny().orElseThrow();
         exercise.setDueDate(ZonedDateTime.now().plusHours(2));
-        exercise = exerciseRepo.save(exercise);
+        exercise = exerciseRepository.save(exercise);
 
         final var participation = participationUtilService.addStudentParticipationForProgrammingExercise(exercise, TEST_PREFIX + "student1");
         final var participationsToUpdate = new StudentParticipationList(participation);
@@ -1007,7 +1053,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         final var course = programmingExerciseUtilService.addCourseWithOneProgrammingExercise();
         var exercise = (ProgrammingExercise) course.getExercises().stream().findAny().orElseThrow();
         exercise.setDueDate(null);
-        exercise = exerciseRepo.save(exercise);
+        exercise = exerciseRepository.save(exercise);
 
         var participation = participationUtilService.addStudentParticipationForProgrammingExercise(exercise, TEST_PREFIX + "student1");
         participation.setIndividualDueDate(ZonedDateTime.now().plusHours(4));
@@ -1027,7 +1073,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         final var course = programmingExerciseUtilService.addCourseWithOneProgrammingExercise();
         var exercise = (ProgrammingExercise) course.getExercises().stream().findAny().orElseThrow();
         exercise.setDueDate(ZonedDateTime.now().minusHours(4));
-        exercise = exerciseRepo.save(exercise);
+        exercise = exerciseRepository.save(exercise);
 
         var participation = participationUtilService.addStudentParticipationForProgrammingExercise(exercise, TEST_PREFIX + "student1");
         participation.setIndividualDueDate(ZonedDateTime.now().plusHours(6));
@@ -1053,7 +1099,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         final var course = programmingExerciseUtilService.addCourseWithOneProgrammingExercise();
         var exercise = (ProgrammingExercise) course.getExercises().stream().findAny().orElseThrow();
         exercise.setDueDate(ZonedDateTime.now().minusHours(4));
-        exercise = exerciseRepo.save(exercise);
+        exercise = exerciseRepository.save(exercise);
 
         var participation = participationUtilService.addStudentParticipationForProgrammingExercise(exercise, TEST_PREFIX + "student1");
         participation.setIndividualDueDate(ZonedDateTime.now().plusHours(4));
@@ -1083,7 +1129,6 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     private static class StudentParticipationList extends ArrayList<StudentParticipation> {
 
         public StudentParticipationList(StudentParticipation... participations) {
-            super();
             this.addAll(Arrays.asList(participations));
         }
     }
@@ -1131,7 +1176,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         participationRepo.save(participation);
         if (afterDueDate) {
             programmingExercise.setDueDate(ZonedDateTime.now().minusHours(1));
-            exerciseRepo.save(programmingExercise);
+            exerciseRepository.save(programmingExercise);
         }
         jenkinsRequestMockProvider.enableMockingOfRequests(jenkinsServer);
         mockDeleteBuildPlan(programmingExercise.getProjectKey(), participation.getBuildPlanId(), false);
@@ -1155,7 +1200,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         var now = ZonedDateTime.now();
         var exercise = TextExerciseFactory.generateTextExercise(now.minusDays(2), now.plusDays(2), now.plusDays(4), course);
         exercise.setMode(ExerciseMode.TEAM);
-        exercise = exerciseRepo.save(exercise);
+        exercise = exerciseRepository.save(exercise);
 
         var student = userUtilService.getUserByLogin(TEST_PREFIX + "student1");
 
@@ -1164,7 +1209,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         var teams = new HashSet<Team>();
         teams.add(team);
         exercise.setTeams(teams);
-        exercise = exerciseRepo.save(exercise);
+        exercise = exerciseRepository.save(exercise);
 
         var participation = participationUtilService.addTeamParticipationForExercise(exercise, team.getId());
         var actualParticipation = request.get("/api/exercises/" + exercise.getId() + "/participation", HttpStatus.OK, StudentParticipation.class);
@@ -1185,7 +1230,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
 
         var participations = participationService.findByExerciseAndStudentIdWithEagerSubmissions(exercise, student.getId());
         assertThat(participations).hasSize(1);
-        assertThat(participations.get(0).getId()).isEqualTo(participation.getId());
+        assertThat(participations.getFirst().getId()).isEqualTo(participation.getId());
     }
 
     @Test
@@ -1202,7 +1247,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
 
         var participations = participationService.findByExerciseAndStudentId(exercise, student.getId());
         assertThat(participations).hasSize(1);
-        assertThat(participations.get(0).getId()).isEqualTo(participation.getId());
+        assertThat(participations.getFirst().getId()).isEqualTo(participation.getId());
     }
 
     @Test
@@ -1261,7 +1306,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         var now = ZonedDateTime.now();
         var exercise = TextExerciseFactory.generateTextExercise(now.minusDays(2), now.plusDays(2), now.plusDays(4), course);
         exercise.setMode(ExerciseMode.TEAM);
-        return exerciseRepo.save(exercise);
+        return exerciseRepository.save(exercise);
     }
 
     private Team createTeamForExercise(User student, Exercise exercise) {
@@ -1276,7 +1321,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         var teams = new HashSet<Team>();
         teams.add(team);
         exercise.setTeams(teams);
-        return exerciseRepo.save(exercise);
+        return exerciseRepository.save(exercise);
     }
 
     @ParameterizedTest(name = "{displayName} [{index}] {argumentsWithNames}")
@@ -1284,7 +1329,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @EnumSource(QuizMode.class)
     void getParticipation_quizExerciseNotStarted(QuizMode quizMode) throws Exception {
         var quizEx = QuizExerciseFactory.generateQuizExercise(ZonedDateTime.now().plusHours(2), ZonedDateTime.now().plusDays(1), quizMode, course);
-        quizEx = exerciseRepo.save(quizEx);
+        quizEx = exerciseRepository.save(quizEx);
         request.get("/api/exercises/" + quizEx.getId() + "/participation", HttpStatus.FORBIDDEN, StudentParticipation.class);
     }
 
@@ -1293,7 +1338,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @EnumSource(QuizMode.class)
     void getParticipation_quizExerciseStartedAndNoParticipation(QuizMode quizMode) throws Exception {
         var quizEx = QuizExerciseFactory.generateQuizExercise(ZonedDateTime.now().minusMinutes(2), ZonedDateTime.now().minusMinutes(1), quizMode, course);
-        quizEx = exerciseRepo.save(quizEx);
+        quizEx = exerciseRepository.save(quizEx);
         request.getNullable("/api/exercises/" + quizEx.getId() + "/participation", HttpStatus.NO_CONTENT, StudentParticipation.class);
     }
 
@@ -1301,7 +1346,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void getParticipation_quizBatchNotPresent() throws Exception {
         var quizEx = QuizExerciseFactory.generateQuizExercise(ZonedDateTime.now().minusMinutes(1), ZonedDateTime.now().plusMinutes(5), QuizMode.INDIVIDUAL, course).duration(360);
-        quizEx = exerciseRepo.save(quizEx);
+        quizEx = exerciseRepository.save(quizEx);
         var participation = request.get("/api/exercises/" + quizEx.getId() + "/participation", HttpStatus.OK, StudentParticipation.class);
         quizEx.setRemainingNumberOfAttempts(1);
         assertThat(participation.getExercise()).as("Participation contains exercise").isEqualTo(quizEx);
@@ -1314,7 +1359,7 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
     @EnumSource(QuizMode.class)
     void getParticipation_quizExerciseFinished(QuizMode quizMode) throws Exception {
         var quizEx = QuizExerciseFactory.generateQuizExercise(ZonedDateTime.now().minusMinutes(20), ZonedDateTime.now().minusMinutes(20), quizMode, course);
-        quizEx = exerciseRepo.save(quizEx);
+        quizEx = exerciseRepository.save(quizEx);
         var participation = participationUtilService.createAndSaveParticipationForExercise(quizEx, TEST_PREFIX + "student1");
         var submission = participationUtilService.addSubmission(participation, new QuizSubmission().scoreInPoints(11D).submitted(true));
         participationUtilService.addResultToParticipation(participation, submission);
@@ -1342,15 +1387,15 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         quizExercise.addQuestions(QuizExerciseFactory.createShortAnswerQuestion());
         quizExercise.setDuration(600);
         quizExercise.setQuizPointStatistic(new QuizPointStatistic());
-        quizExercise = exerciseRepo.save(quizExercise);
+        quizExercise = exerciseRepository.save(quizExercise);
 
-        ShortAnswerQuestion saQuestion = (ShortAnswerQuestion) quizExercise.getQuizQuestions().get(0);
+        ShortAnswerQuestion saQuestion = (ShortAnswerQuestion) quizExercise.getQuizQuestions().getFirst();
         List<ShortAnswerSpot> spots = saQuestion.getSpots();
         ShortAnswerSubmittedAnswer submittedAnswer = new ShortAnswerSubmittedAnswer();
         submittedAnswer.setQuizQuestion(saQuestion);
 
         ShortAnswerSubmittedText text = new ShortAnswerSubmittedText();
-        text.setSpot(spots.get(0));
+        text.setSpot(spots.getFirst());
         text.setText("test");
         submittedAnswer.addSubmittedTexts(text);
 
@@ -1379,6 +1424,137 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         assertThat(actualSubmittedAnswerText.isIsCorrect()).isFalse();
     }
 
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+    void whenRequestFeedbackForExam_thenFail() throws Exception {
+
+        Exam examWithExerciseGroups = ExamFactory.generateExamWithExerciseGroup(course, false);
+        examRepository.save(examWithExerciseGroups);
+        var exerciseGroup1 = examWithExerciseGroups.getExerciseGroups().getFirst();
+        programmingExercise = ProgrammingExerciseFactory.generateProgrammingExerciseForExam(exerciseGroup1);
+        programmingExercise.setBuildConfig(programmingExerciseBuildConfigRepository.save(programmingExercise.getBuildConfig()));
+        programmingExercise = exerciseRepository.save(programmingExercise);
+        course.addExercises(programmingExercise);
+        course = courseRepository.save(course);
+
+        var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INACTIVE, programmingExercise,
+                userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
+
+        var localRepo = new LocalRepository(defaultBranch);
+        localRepo.configureRepos("testLocalRepo", "testOriginRepo");
+
+        participation.setRepositoryUri(ParticipationFactory.getMockFileRepositoryUri(localRepo).getURI().toString());
+        participationRepo.save(participation);
+
+        gitService.getDefaultLocalPathOfRepo(participation.getVcsRepositoryUri());
+
+        var result = ParticipationFactory.generateResult(true, 100).participation(participation);
+        result.setCompletionDate(ZonedDateTime.now());
+        resultRepository.save(result);
+
+        request.putAndExpectError("/api/exercises/" + programmingExercise.getId() + "/request-feedback", null, HttpStatus.BAD_REQUEST, "preconditions not met");
+
+        localRepo.resetLocalRepo();
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+    void whenFeedbackRequestedAndDeadlinePassed_thenFail() throws Exception {
+
+        programmingExercise.setDueDate(ZonedDateTime.now().minusDays(100));
+        programmingExercise = exerciseRepository.save(programmingExercise);
+
+        var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INACTIVE, programmingExercise,
+                userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
+
+        var localRepo = new LocalRepository(defaultBranch);
+        localRepo.configureRepos("testLocalRepo", "testOriginRepo");
+
+        participation.setRepositoryUri(ParticipationFactory.getMockFileRepositoryUri(localRepo).getURI().toString());
+        participationRepo.save(participation);
+
+        gitService.getDefaultLocalPathOfRepo(participation.getVcsRepositoryUri());
+
+        var result = ParticipationFactory.generateResult(true, 100).participation(participation);
+        result.setCompletionDate(ZonedDateTime.now());
+        resultRepository.save(result);
+
+        request.putAndExpectError("/api/exercises/" + programmingExercise.getId() + "/request-feedback", null, HttpStatus.BAD_REQUEST, "preconditions not met");
+
+        localRepo.resetLocalRepo();
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+    void whenFeedbackRequestedAndRateLimitExceeded_thenFail() throws Exception {
+
+        programmingExercise.setDueDate(ZonedDateTime.now().plusDays(100));
+        programmingExercise = exerciseRepository.save(programmingExercise);
+
+        var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INACTIVE, programmingExercise,
+                userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
+
+        var localRepo = new LocalRepository(defaultBranch);
+        localRepo.configureRepos("testLocalRepo", "testOriginRepo");
+
+        participation.setRepositoryUri(ParticipationFactory.getMockFileRepositoryUri(localRepo).getURI().toString());
+        participationRepo.save(participation);
+
+        gitService.getDefaultLocalPathOfRepo(participation.getVcsRepositoryUri());
+
+        var result = ParticipationFactory.generateResult(true, 100).participation(participation);
+        result.setCompletionDate(ZonedDateTime.now());
+        resultRepository.save(result);
+
+        // generate 5 athena results
+        for (int i = 0; i < 5; i++) {
+            var athenaResult = ParticipationFactory.generateResult(false, 100).participation(participation);
+            athenaResult.setCompletionDate(ZonedDateTime.now());
+            athenaResult.setAssessmentType(AssessmentType.AUTOMATIC_ATHENA);
+            resultRepository.save(athenaResult);
+        }
+
+        request.putAndExpectError("/api/exercises/" + programmingExercise.getId() + "/request-feedback", null, HttpStatus.BAD_REQUEST, "preconditions not met");
+
+        localRepo.resetLocalRepo();
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+    void whenFeedbackRequestedAndRateLimitStillUnknownDueRequestsInProgress_thenFail() throws Exception {
+
+        programmingExercise.setDueDate(ZonedDateTime.now().plusDays(100));
+        programmingExercise = exerciseRepository.save(programmingExercise);
+
+        var participation = ParticipationFactory.generateProgrammingExerciseStudentParticipation(InitializationState.INACTIVE, programmingExercise,
+                userUtilService.getUserByLogin(TEST_PREFIX + "student1"));
+
+        var localRepo = new LocalRepository(defaultBranch);
+        localRepo.configureRepos("testLocalRepo", "testOriginRepo");
+
+        participation.setRepositoryUri(ParticipationFactory.getMockFileRepositoryUri(localRepo).getURI().toString());
+        participationRepo.save(participation);
+
+        gitService.getDefaultLocalPathOfRepo(participation.getVcsRepositoryUri());
+
+        var result = ParticipationFactory.generateResult(false, 100).participation(participation);
+        result.setCompletionDate(ZonedDateTime.now());
+        resultRepository.save(result);
+
+        // generate 5 athena results
+        for (int i = 0; i < 5; i++) {
+            var athenaResult = ParticipationFactory.generateResult(false, 100).participation(participation);
+            athenaResult.setCompletionDate(ZonedDateTime.now());
+            athenaResult.setAssessmentType(AssessmentType.AUTOMATIC_ATHENA);
+            athenaResult.setSuccessful(null);
+            resultRepository.save(athenaResult);
+        }
+
+        request.putAndExpectError("/api/exercises/" + programmingExercise.getId() + "/request-feedback", null, HttpStatus.BAD_REQUEST, "preconditions not met");
+
+        localRepo.resetLocalRepo();
+    }
+
     @Nested
     @Isolated
     class ParticipationIntegrationIsolatedTest {
@@ -1388,13 +1564,16 @@ class ParticipationIntegrationTest extends AbstractSpringIntegrationJenkinsGitla
         @EnumSource(QuizMode.class)
         void getParticipation_quizExerciseStartedAndSubmissionAllowed(QuizMode quizMode) throws Exception {
             var quizEx = QuizExerciseFactory.generateQuizExercise(ZonedDateTime.now().minusMinutes(1), ZonedDateTime.now().plusMinutes(5), quizMode, course).duration(360);
-            quizEx = exerciseRepo.save(quizEx);
+            quizEx = exerciseRepository.save(quizEx);
+
+            request.postWithResponseBody("/api/quiz-exercises/" + quizEx.getId() + "/start-participation", null, StudentParticipation.class, HttpStatus.OK);
 
             if (quizMode != QuizMode.SYNCHRONIZED) {
                 var batch = quizBatchService.save(QuizExerciseFactory.generateQuizBatch(quizEx, ZonedDateTime.now().minusSeconds(10)));
-                quizExerciseUtilService.joinQuizBatch(quizEx, batch, TEST_PREFIX + "student1");
+                request.postWithResponseBody("/api/quiz-exercises/" + quizEx.getId() + "/join", new QuizBatchJoinDTO(batch.getPassword()), QuizBatch.class, HttpStatus.OK);
             }
-            var participation = request.get("/api/exercises/" + quizEx.getId() + "/participation", HttpStatus.OK, StudentParticipation.class);
+            var participation = request.postWithResponseBody("/api/quiz-exercises/" + quizEx.getId() + "/start-participation", null, StudentParticipation.class, HttpStatus.OK);
+            ;
             assertThat(participation.getExercise()).as("Participation contains exercise").isEqualTo(quizEx);
             assertThat(participation.getResults()).as("New result was added to the participation").hasSize(1);
             assertThat(participation.getInitializationState()).as("Participation was initialized").isEqualTo(InitializationState.INITIALIZED);
