@@ -1,7 +1,13 @@
 package de.tum.in.www1.artemis.plagiarism;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.reset;
+import static org.mockito.Mockito.verify;
 
 import java.util.List;
 
@@ -28,13 +34,11 @@ import de.tum.in.www1.artemis.domain.metis.UserRole;
 import de.tum.in.www1.artemis.domain.metis.conversation.Channel;
 import de.tum.in.www1.artemis.domain.plagiarism.PlagiarismCase;
 import de.tum.in.www1.artemis.post.ConversationUtilService;
-import de.tum.in.www1.artemis.repository.CourseRepository;
 import de.tum.in.www1.artemis.repository.metis.ConversationMessageRepository;
 import de.tum.in.www1.artemis.repository.metis.PostRepository;
 import de.tum.in.www1.artemis.repository.plagiarism.PlagiarismCaseRepository;
 import de.tum.in.www1.artemis.service.notifications.GroupNotificationService;
-import de.tum.in.www1.artemis.user.UserUtilService;
-import de.tum.in.www1.artemis.web.rest.dto.PostContextFilter;
+import de.tum.in.www1.artemis.web.rest.dto.PostContextFilterDTO;
 import de.tum.in.www1.artemis.web.websocket.dto.metis.PostDTO;
 
 class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCTest {
@@ -49,12 +53,6 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
 
     @Autowired
     private PlagiarismCaseRepository plagiarismCaseRepository;
-
-    @Autowired
-    private CourseRepository courseRepository;
-
-    @Autowired
-    private UserUtilService userUtilService;
 
     @Autowired
     private ConversationUtilService conversationUtilService;
@@ -87,7 +85,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
                 .filter(coursePost -> (coursePost.getConversation() instanceof Channel channel && channel.getExercise() != null)).toList();
 
         // filter existing posts with first exercise context
-        exerciseChannel = ((Channel) existingExercisePosts.get(0).getConversation());
+        exerciseChannel = ((Channel) existingExercisePosts.getFirst().getConversation());
         exercise = exerciseChannel.getExercise();
         postsBelongingToExercise = existingExercisePosts.stream().filter(post -> (post.getConversation().getId().equals(exerciseChannel.getId()))).toList();
 
@@ -102,7 +100,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
 
         courseId = course.getId();
 
-        plagiarismCaseId = existingPlagiarismPosts.get(0).getPlagiarismCase().getId();
+        plagiarismCaseId = existingPlagiarismPosts.getFirst().getPlagiarismCase().getId();
 
         GroupNotificationService groupNotificationService = mock(GroupNotificationService.class);
         doNothing().when(groupNotificationService).notifyAllGroupsAboutNewAnnouncement(any(), any());
@@ -126,8 +124,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
         Post notCreatedPost = request.postWithResponseBody("/api/courses/" + courseId + "/posts", postToSave, Post.class, HttpStatus.BAD_REQUEST);
 
         assertThat(notCreatedPost).isNull();
-        PostContextFilter postContextFilter = new PostContextFilter(courseId);
-        postContextFilter.setConversationId(exerciseChannel.getId());
+        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(courseId, null, null, exerciseChannel.getId(), null, false, false, false, null, null);
         assertThat(postsBelongingToExercise).hasSameSizeAs(conversationMessageRepository.findMessages(postContextFilter, Pageable.unpaged(), 1));
 
         // conversation participants should not be notified
@@ -185,7 +182,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testCreateExistingPost_badRequest() throws Exception {
-        Post existingPostToSave = existingPosts.get(0);
+        Post existingPostToSave = existingPosts.getFirst();
 
         var sizeBefore = postRepository.findAll().size();
 
@@ -215,7 +212,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
     @Test
     @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void testEditPost_asTutor() throws Exception {
-        Post postToUpdate = editExistingPost(existingPlagiarismPosts.get(0));
+        Post postToUpdate = editExistingPost(existingPlagiarismPosts.getFirst());
         Post notUpdatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToUpdate.getId(), postToUpdate, Post.class, HttpStatus.FORBIDDEN);
         assertThat(notUpdatedPost).isNull();
     }
@@ -225,7 +222,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testEditPostWithUserMention(String userMention, boolean isUserMentionValid) throws Exception {
         // update post of student1 (index 0)--> OK
-        Post postToUpdate = editExistingPost(existingPosts.get(0));
+        Post postToUpdate = editExistingPost(existingPosts.getFirst());
         postToUpdate.setContent(userMention);
 
         if (!isUserMentionValid) {
@@ -242,7 +239,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testEditPost_asStudent_forbidden() throws Exception {
         // update post from another student (index 1)--> forbidden
-        Post postToNotUpdate = editExistingPost(existingPosts.get(0));
+        Post postToNotUpdate = editExistingPost(existingPosts.getFirst());
 
         Post notUpdatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToNotUpdate.getId(), postToNotUpdate, Post.class, HttpStatus.FORBIDDEN);
         assertThat(notUpdatedPost).isNull();
@@ -251,7 +248,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testEditPostWithIdIsNull_badRequest() throws Exception {
-        Post postToUpdate = existingPosts.get(0);
+        Post postToUpdate = existingPosts.getFirst();
         postToUpdate.setId(null);
 
         Post updatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToUpdate.getId(), postToUpdate, Post.class, HttpStatus.BAD_REQUEST);
@@ -270,7 +267,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
         List<Post> returnedPosts = getPosts(params);
         // get amount of posts with certain plagiarism context
         assertThat(returnedPosts).hasSameSizeAs(existingPlagiarismPosts);
-        assertThat(returnedPosts.get(0).getAuthorRole()).isEqualTo(UserRole.INSTRUCTOR);
+        assertThat(returnedPosts.getFirst().getAuthorRole()).isEqualTo(UserRole.INSTRUCTOR);
     }
 
     @Test
@@ -310,7 +307,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
     @Test
     @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void testDeletePost_asTutor_forbidden() throws Exception {
-        Post postToNotDelete = existingPlagiarismPosts.get(0);
+        Post postToNotDelete = existingPlagiarismPosts.getFirst();
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToNotDelete.getId(), HttpStatus.FORBIDDEN);
         assertThat(postRepository.findById(postToNotDelete.getId())).isPresent();
@@ -319,7 +316,7 @@ class PlagiarismPostIntegrationTest extends AbstractSpringIntegrationLocalCILoca
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testDeletePost_asInstructor() throws Exception {
-        Post postToNotDelete = existingPlagiarismPosts.get(0);
+        Post postToNotDelete = existingPlagiarismPosts.getFirst();
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToNotDelete.getId(), HttpStatus.OK);
         assertThat(postRepository.findById(postToNotDelete.getId())).isNotPresent();
