@@ -3,6 +3,7 @@ package de.tum.in.www1.artemis.user;
 import static de.tum.in.www1.artemis.user.UserFactory.USER_PASSWORD;
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
@@ -182,6 +183,31 @@ public class UserUtilService {
     public User setRegistrationNumberOfUserAndSave(User user, String registrationNumber) {
         user.setRegistrationNumber(registrationNumber);
         return userRepo.save(user);
+    }
+
+    /**
+     * Updates and saves the user's vcsAccessToken and its expiry date
+     *
+     * @param user           The User to update
+     * @param vcsAccessToken The userVcsAccessToken to set
+     * @param expiryDate     The tokens expiry date
+     * @return The updated User
+     */
+    public User setUserVcsAccessTokenAndExpiryDateAndSave(User user, String vcsAccessToken, ZonedDateTime expiryDate) {
+        user.setVcsAccessToken(vcsAccessToken);
+        user.setVcsAccessTokenExpiryDate(expiryDate);
+        return userRepo.save(user);
+    }
+
+    /**
+     * Deletes the userVcsAccessToken from a user
+     *
+     * @param userWithUserToken The user whose token gets deleted
+     */
+    public void deleteUserVcsAccessToken(User userWithUserToken) {
+        userWithUserToken.setVcsAccessTokenExpiryDate(null);
+        userWithUserToken.setVcsAccessToken(null);
+        userRepo.save(userWithUserToken);
     }
 
     /**
@@ -386,7 +412,7 @@ public class UserUtilService {
         if (!userExistsWithLogin(instructorName)) {
             var newUsers = generateAndSaveActivatedUsers(instructorName, new String[] { instructorGroup, "testgroup" }, instructorAuthorities, 1);
             if (!newUsers.isEmpty()) {
-                var instructor = userRepo.save(newUsers.get(0));
+                var instructor = userRepo.save(newUsers.getFirst());
                 assertThat(instructor.getId()).as("Instructor has been created").isNotNull();
             }
         }
@@ -402,7 +428,7 @@ public class UserUtilService {
         if (!userExistsWithLogin(editorName)) {
             var newUsers = generateAndSaveActivatedUsers(editorName, new String[] { editorGroup, "testgroup" }, editorAuthorities, 1);
             if (!newUsers.isEmpty()) {
-                var editor = userRepo.save(newUsers.get(0));
+                var editor = userRepo.save(newUsers.getFirst());
                 assertThat(editor.getId()).as("Editor has been created").isNotNull();
             }
         }
@@ -418,7 +444,7 @@ public class UserUtilService {
         if (!userExistsWithLogin(taName)) {
             var newUsers = generateAndSaveActivatedUsers(taName, new String[] { taGroup, "testgroup" }, tutorAuthorities, 1);
             if (!newUsers.isEmpty()) {
-                var ta = userRepo.save(newUsers.get(0));
+                var ta = userRepo.save(newUsers.getFirst());
                 assertThat(ta.getId()).as("Teaching assistant has been created").isNotNull();
             }
         }
@@ -434,7 +460,7 @@ public class UserUtilService {
         if (!userExistsWithLogin(studentName)) {
             var newUsers = generateAndSaveActivatedUsers(studentName, new String[] { studentGroup, "testgroup" }, studentAuthorities, 1);
             if (!newUsers.isEmpty()) {
-                var student = userRepo.save(newUsers.get(0));
+                var student = userRepo.save(newUsers.getFirst());
                 assertThat(student.getId()).as("Student has been created").isNotNull();
             }
         }
