@@ -2,7 +2,8 @@ package de.tum.in.www1.artemis.util;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.*;
+import java.util.Comparator;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -53,7 +54,7 @@ public class ExerciseIntegrationTestService {
         courseFilterParams.add("isExamFilter", "false");
         final var resultWithOnlyCoursesFilterActive = request.getSearchResult(apiPath, HttpStatus.OK, Exercise.class, courseFilterParams);
         assertThat(resultWithOnlyCoursesFilterActive.getResultsOnPage()).hasSize(1);
-        String courseFilterExerciseTitle = resultWithOnlyCoursesFilterActive.getResultsOnPage().get(0).getTitle();
+        String courseFilterExerciseTitle = resultWithOnlyCoursesFilterActive.getResultsOnPage().getFirst().getTitle();
         assertThat(courseFilterExerciseTitle).isEqualTo(searchTerm);
 
         // only exam filter set -> should show only the exercise course
@@ -62,7 +63,7 @@ public class ExerciseIntegrationTestService {
         examFilterParams.add("isExamFilter", "true");
         final var resultWithOnlyExamFilterActive = request.getSearchResult(apiPath, HttpStatus.OK, Exercise.class, examFilterParams);
         assertThat(resultWithOnlyExamFilterActive.getResultsOnPage()).hasSize(1);
-        String examFilterExerciseTitle = resultWithOnlyExamFilterActive.getResultsOnPage().get(0).getTitle();
+        String examFilterExerciseTitle = resultWithOnlyExamFilterActive.getResultsOnPage().getFirst().getTitle();
         assertThat(examFilterExerciseTitle).isEqualTo(searchTerm + "-Morpork");
 
         var columnNameMap = PageUtil.ColumnMapping.EXERCISE.getColumnNameMap();
